--- a/localisation/braz_por/MD_decisions_l_braz_por.yml
+++ b/localisation/braz_por/MD_decisions_l_braz_por.yml
@@ -30,7 +30,7 @@
  HUN_nationalist_claims_UKR: "Reivindique a Carpathia Húngara"
  HUN_nationalist_claims_UKR_desc: "A população húngara na Ucrânia tem sofrido por muito tempo. Devemos buscar a reunificação com eles."
  NOR_nationalist_claims_DEN: "Reivindique Grønland e Færøyene de volta"
- NOR_nationalist_claims_DEN_desc: "Grønland e Færøyene são partes históricas da Noruega, nossas possessões foram ilegalmente entregues a [DEN.GetNameWithFlag] por [SWE.GetNameWithFlag]. Não é legal. Deveria ser óbvio que queremos tê-las de volta."
+ NOR_nationalist_claims_DEN_desc: "Grønland e Færøyene sempre foram partes históricas da Noruega, mas nossos bens foram entregues ilegalmente a [DEN.GetNameWithFlag] por [SWE.GetNameWithFlag]. Isso não é legal. Deveria ser evidente que os queremos de volta."
  NOR_nationalist_claims_ENG: "Reivindique Shetland"
  NOR_nationalist_claims_ENG_desc: "Shetland tem uma cultura mais próxima da Noruega do que da Escócia ou [ENG.GetNameWithFlag]. Eles seriam mais felizes sob nosso domínio."
  NOR_nationalist_claims_SCO: "Reivindique Shetland"
