--- a/localisation/braz_por/MD_focus_CHI_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_CHI_l_braz_por.yml
@@ -1440,7 +1440,7 @@
  declare_independence_taiwan_desc: "Taiwan não é a China. Isso significa que não faz parte da República Popular, como afirma o CCP, nem é o reduto temporário do governo da República da China, como afirmam o KMT e seus aliados. Como tal, devemos declarar nossa independência e buscar apoio internacional para nosso status como a mais nova nação do mundo."
  recalculate_coalition_support_taiwan: "Atualizar Valores de Apoio Total"
  southwest_hydroelectricity_dev_category: "Desenvolvimento de Hidrelétricas no Sudoeste"
- southwest_hydroelectricity_dev_category_desc: "Devido ao desenvolvimento econômico regional relativamente atrasado, os recursos energéticos do sudoeste do meu país não estão totalmente desenvolvidos, especialmente os abundantes recursos de energia hidrelétrica."
+ southwest_hydroelectricity_dev_category_desc: "Devido ao desenvolvimento económico regional relativamente atrasado, os recursos energéticos do sudoeste da China não estão totalmente desenvolvidos em geral, especialmente os abundantes recursos hidroeléctricos."
  construction_jinshajiang_dam: "Construção do Projeto Hidrelétrico do Rio Jinsha"
  construction_jinshajiang_dam_desc: "O Rio Jinsha está localizado nas cabeceiras do Rio Yangtzé e possui abundantes recursos hídricos. É muito adequado para a construção de projetos de conservação de água para aliviar nossa atual escassez de recursos."
  construction_yalongjiang_dam: "Construção do Projeto Hidrelétrico do Rio Yalong"
