--- a/localisation/braz_por/MD_focus_ITA_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_ITA_l_braz_por.yml
@@ -514,11 +514,6 @@
  ITA_further_protect_workers_rights_decision: "Melhorar os Direitos dos Trabalhadores"
  ITA_further_protect_workers_rights_decision_desc: "Os trabalhadores com contratos de duração indeterminada já são a categoria mais protegida na Itália, mas ainda são o maior grupo de eleitores, juntamente com aposentados, então apaziguá-los é uma estratégia fácil de ganhar votos para garantir que nossa taxa de aprovação permaneça alta."
  ITA_further_protect_workers_rights_decision_repeal: "Reverter novos Direitos dos Trabalhadores"
- ITA_ITA_modify_article_18: "Modificar o Artigo 18"
- ITA_ITA_modify_article_18_desc: "O artigo 18.º do Estatuto dos Trabalhadores torna extremamente difícil para os empregadores despedir os seus empregados e o nosso mercado de trabalho tem sofrido em conformidade. Modificá-la irá certamente desencadear acusações de “trabalho forçado” e “escravatura” por parte da oposição, mas na realidade é apenas bom senso."
- ITA_ITA_modify_article_18_decision: "Modificar o Artigo 18"
- ITA_ITA_modify_article_18_decision_desc: "O artigo 18.º do Estatuto dos Trabalhadores torna extremamente difícil para os empregadores despedir os seus empregados e o nosso mercado de trabalho tem sofrido em conformidade. Modificá-la irá certamente desencadear acusações de “trabalho forçado” e “escravatura” por parte da oposição, mas na realidade é apenas bom senso."
- ITA_ITA_modify_article_18_decision_repeal: "Reverter modificações do Artigo 18"
  ITA_save_struggling_companies: "Salvar Empresas em Dificuldade"
  ITA_save_struggling_companies_desc: "Garantir a sobrevivência de empresas não competitivas não é barato de forma alguma, mas os trabalhadores e os sindicatos certamente lembrarão de quem salvou seus empregos quando as eleições chegarem."
  ITA_save_struggling_companies_decision: "Salvar Empresas em Dificuldades"
@@ -2528,3 +2523,8 @@
  ITA_restart_otomatic_development: "Reiniciar o Desenvolvimento do Otomatic"
  ITA_restart_otomatic_development_desc: "Reiniciar o Desenvolvimento do Otomatic"
  ITA_treaty_of_benghazi_TT: "O §YTratado de Benghazi§! foi assinado com [LBA.GetNameWithFlag]"
+ ITA_modify_article_18: "Modificar o Artigo 18"
+ ITA_modify_article_18_desc: "O artigo 18.º do Estatuto dos Trabalhadores torna extremamente difícil para os empregadores despedir os seus empregados e o nosso mercado de trabalho tem sofrido em conformidade. Modificá-la irá certamente desencadear acusações de “trabalho forçado” e “escravatura” por parte da oposição, mas na realidade é apenas bom senso."
+ ITA_modify_article_18_decision: "Modificar o Artigo 18"
+ ITA_modify_article_18_decision_desc: "O artigo 18.º do Estatuto dos Trabalhadores torna extremamente difícil para os empregadores despedir os seus empregados e o nosso mercado de trabalho tem sofrido em conformidade. Modificá-la irá certamente desencadear acusações de “trabalho forçado” e “escravatura” por parte da oposição, mas na realidade é apenas bom senso."
+ ITA_modify_article_18_decision_repeal: "Reverter modificações do Artigo 18"
