--- a/localisation/french/MD_africa_events_l_french.yml
+++ b/localisation/french/MD_africa_events_l_french.yml
@@ -118,58 +118,58 @@
  ivory_coast_md.101.t: "Première guerre civile ivoirienne"
  ivory_coast_md.101.d: "Alimentée par les tensions raciales entre les ivoiriens et les immigrés, peu représentés politiquement, une coalition se faisant appeler Forces Nouvelles s'est levée contre le gouvernement."
  ivory_coast_md.101.o1: "Mort aux rebelles !"
- ivory_coast_md.101.o2: "Death to the FPI!"
- ivory_coast_md.101.o3: "Intervene in Support of FNCI (nationalist)."
- ivory_coast_md.101.o4: "Thoughts & Prayers"
- ivory_coast_md.101.o5: "A Worrying Development"
- ivory_coast_md.102.t: "Uprising in the Ivory Coast"
- ivory_coast_md.102.d: "Fueled by racial tensions between natives of the Ivory Coast and immigrants, who receive little political representation, a coalition calling themselves the New Forces have risen and taken control of much of the north of the country. The southern government has yet to respond. It is unclear what will happen next."
- ivory_coast_md.102.o1: "Well it could be worse..."
- ivory_coast_md.102.o2: "Freedom at last!"
- ivory_coast_md.102.o3: "Support the FNCI (nationalist)."
- ivory_coast_md.102.o4: "Thoughts and prayers."
- ivory_coast_md.103.t: "First Ivory Coast Civil War"
- ivory_coast_md.103.d: "The Ivorian Popular Front has attempted a coup against the reigning Military Junta in the capital Yamoussoukro. The Junta however was able to escape the city beforehand leaving the rebels in control of much of the East of the country. To make matters worse a coalition calling themselves the New Forces, headed by the Patriotic Movement, have risen in the north also claiming themselves as the legitimate government."
+ ivory_coast_md.101.o2: "Mort au FPI !"
+ ivory_coast_md.101.o3: "Intervenir en soutient du FNCI (nationalistes)."
+ ivory_coast_md.101.o4: "Toutes nos pensées vont vers eux. "
+ ivory_coast_md.101.o5: "Une évolution inquiétante."
+ ivory_coast_md.102.t: "Soulèvement en Côte d'Ivoire"
+ ivory_coast_md.102.d: "A cause des tensions raciales entre les natifs de la Côte d'Ivoire et les migrants, qui reçoivent très peu de représentation politique, une coalition se faisant appelés les Forces Nouvelles se sont soulevées et ont pris control de la plupart du Nord du pays. Le gouvernement du sud n'a pas encore répondu. Ce n'est pas clair de ce qui va se passer ensuite."
+ ivory_coast_md.102.o1: "Bah, ça pourrait être pire..."
+ ivory_coast_md.102.o2: "Enfin, la liberté !"
+ ivory_coast_md.102.o3: "Soutenir le FNCI (Nationalistes)."
+ ivory_coast_md.102.o4: "Toutes nos pensées vont vers eux."
+ ivory_coast_md.103.t: "Première guerre civile Ivoirienne"
+ ivory_coast_md.103.d: "Le Front Populaire Ivoirien à essayé un coup d'état contre Junte militaire au pouvoir dans la capitale Yamoussoukro. La Junte, à quand même réussi à s'échapper de la ville avant, laissant les rebelles en control de la plupart de l'Est du pays. Pour rendre la situation encore pire, une coalition se faisant appeler les Forces Nouvelles, dirigées par le Mouvement patriotique, se sont soulevées dans le Nord, revendiquant aussi leur gouvernement comme le gouvernement légitime."
  ivory_coast_md.103.o1: "Mort aux rebelles !"
- ivory_coast_md.103.o2: "Down with the Junta!"
- ivory_coast_md.103.o3: "Support the Junta."
- ivory_coast_md.103.o4: "Support the FNCI (national populists)."
- ivory_coast_md.103.o5: "Thoughts and prayers."
- ivory_coast_md.104.t: "End of the First [CDI.GetAdjective] Civil War"
- ivory_coast_md.104.d: "Civil war in [CDI.GetNameDef] has concluded today as the warring factions have started to settle down. It is of vital importance that the country settle into its new status quo and move towards stability. Peace has finally reigned over the war-torn country. The First Ivorian Civil War has come to its conclusion."
- ivory_coast_md.104.o1: "The rebels have been defeated."
- ivory_coast_md.104.o2: "The government is successful."
- ivory_coast_md.104.o3: "Peace at last!"
- ivory_coast_md.105.t: "End of the Second [CDI.GetAdjective] Civil War"
+ ivory_coast_md.103.o2: "Mort à la junte !"
+ ivory_coast_md.103.o3: "Supporter la junte."
+ ivory_coast_md.103.o4: "Supporter le FNCI (populistes nationnaux)"
+ ivory_coast_md.103.o5: "Toutes nos pensées vont vers eux."
+ ivory_coast_md.104.t: "Fin de la Première Guerre Civile [CDI.GetAdjective]"
+ ivory_coast_md.104.d: "La Guerre Civile en [CDI.GetNameDef] c'est terminée aujourd'hui étant donné que les factions combattantes ont commencées à démobiliser. Il est d'importance vitale que le pays maintienne le status quo et se stabilise. La paix à enfin régnée sur le pays déchiré par la guerre. La première Guerre civile Ivoirienne vient de venir à sa conclusion."
+ ivory_coast_md.104.o1: "Les rebelles ont été vaincus."
+ ivory_coast_md.104.o2: "Le gouvernement est couronné de succès. "
+ ivory_coast_md.104.o3: "La paix, enfin!"
+ ivory_coast_md.105.t: "Fin de la Seconde Guerre Civile [CDI.GetAdjective]"
  ivory_coast_md.105.d: "The Second [CDI.GetAdjective] Civil War has come to its conclusion as the fighting between the [FNC.GetName] and [CDI.GetName] has concluded. The country is beginning its steady settle into the new status quo in the aftermath of the fighting. Time will tell what the consequences of this war will be, but peace will once again reign supreme in [CDI.GetName]."
- ivory_coast_md.105.a: "The Rebels Have Been Defeated"
+ ivory_coast_md.105.a: "Les rebelles ont été vaincus."
  ivory_coast_md.105.b: "The Government is Successful"
- ivory_coast_md.105.c: "Peace in the [CDI.GetName]"
+ ivory_coast_md.105.c: "Paix dans la [CDI.GetName]"
  senegal_md.1.t: "The 2000 [SEN.GetAdjective] Elections"
  senegal_md.1.d: "The [neutral_Social_L] has ruled Senegal from independence in 1960 up until now. However, recent polling has shown that we are likely to lose the 2000 presidential election to the opposition coalition led by Abdoulaye Wade. The coalition consists of the [liberalism_L], [Western_Autocracy_L], [conservatism_L], and [socialism_L] parties that have banded together to defeat the [neutral_Social_L]. Their combined opposition strength ([?opposition_strength|Y2%]) compared to the [neutral_Social_L] ([?party_pop_array^18|Y2%]) is landing the opposition firmly in the lead. How should we proceed heading into these elections?"
- senegal_md.1.o1: "Let the elections proceed like normal."
+ senegal_md.1.o1: "Laissez les élections se passer comme prévu"
  senegal_md.1.o2: "Perhaps we should 'influence' the elections."
  senegal_md.1.o3: "Maybe this voting thing isn't so good."
  senegal_md.2.t: "Election Rigging"
  senegal_md.2.d: "Our meddling in the elections has gone largely unnoticed by our populace and international observers. While some in the opposition have disputed the result these theories have not gained much traction among the people."
- senegal_md.2.o1: "Haha, cope!"
- senegal_md.3.t: "Protests"
+ senegal_md.2.o1: "Ahah, cope!"
+ senegal_md.3.t: "Manifestations"
  senegal_md.3.d: "There have been widespread protests condemning the mess that has been our elections. Numerous accusations have been thrown around about this so-called \"election rigging\". How should we proceed with the protests?"
- senegal_md.3.o1: "Suppress them."
- senegal_md.3.o2: "Fine, hold the elections again."
- senegal_md.4.t: "Government Quells Protests"
+ senegal_md.3.o1: "Muselez-les."
+ senegal_md.3.o2: "Bon, refaites tenir des éléction."
+ senegal_md.4.t: "Le gouvernement réprime les protestations"
  senegal_md.4.d: "The protests have been largely quelled. However, this does not mean that we have reached the end of our instability... The situation may remain hostile and we can still see the collapse of our hold of power. For the time being, we should remain cautious but continue to monitor the situation for any more of these upstarts..."
- senegal_md.4.o1: "Eh it's probably fine..."
- senegal_md.5.t: "The Elections Allowed"
+ senegal_md.4.o1: "Eh, ça doit bien aller..."
+ senegal_md.5.t: "Les élections sont autorisées"
  senegal_md.5.d: "The elections have been held for the second time. The deliberating holding of power has slowly waned as we return to democracy. The ruling coalition has polled in at [?government_coalition_strength|2Y%] compared to the opposition at [?opposition_strength|Y2%]. A wonderful day for democracy through and through."
- senegal_md.5.o1: "Yay, functional democracy."
- senegal_md.6.t: "[SEN.GetAdjective] Civil War"
+ senegal_md.5.o1: "Ouais ! Une démocratie fonctionnelle. "
+ senegal_md.6.t: "Guerre civile [SEN.GetAdjective]"
  senegal_md.6.d: "The protests have escalated with elements of the military defecting and declaring a rival government in the North East. Separatists in Casamance have taken our moment of weakness to declare their independence. Our country has been plunged into civil war."
- senegal_md.6.o1: "Well this is a mess."
- senegal_md.7.t: "The Casamance Issue"
+ senegal_md.6.o1: "Bon bah, c'est un bordel."
+ senegal_md.7.t: "Le problème de la Casamance"
  senegal_md.7.d: "For the last twenty years Casamance has taken arms against our government, but recently conflict has largely dwindled as peace talks and negotiations have begun between the government and the leaders of the Movement of Democratic Forces of Casamance. How should we proceed with the MDFC?"
- senegal_md.7.a: "Approach with Unity"
- senegal_md.7.b: "Approach with Autonomy"
+ senegal_md.7.a: "Approcher avec l'Unité"
+ senegal_md.7.b: "Approcher avec de l'Autonomie"
  senegal_md.7.c: "Approach with Independence"
  senegal_md.8.t: "Casamance Unity"
  senegal_md.8.d: "Casamance and the Movement of Democratic Forces of Casamance have decided to move forward with the unity talks and have pursued integration, reconstruction and more to rekindle a kind relationship with the Senegalese government. Time will tell whether this uneasy peace will continue to live on..."
@@ -517,8 +517,8 @@
  haiti.9.b: "C'est malheureux"
  haiti.10.t: "Amiot Métayer and the Cannibal Army"
  haiti.10.d: "Amiot Métayer is a prominent gang leader in the north of the country. Métayer has been hired in the past by our government to help persuade the opposition to the correct side. Recently since his arson arrest late last year, he has led several anti-government riots and more. It is starting to take a toll on our image causing further disruptions in our country."
- haiti.10.a: "Eliminate Amiot"
- haiti.10.b: "Let Him Live"
+ haiti.10.a: "Eliminer Amiot"
+ haiti.10.b: "Le laisser vivre"
  haiti.11.t: "Amiot Métayer Found Dead"
  haiti.11.d: "Métayer was found dead earlier today with his eyes, heart and liver missing. His brother, Buteur Métayer, seized control over his brother's gang The Cannibal Army. He promptly renamed the gang to Revolutionary Artibonite Resistance Front giving a different look to the group. It is yet to be known what this move could mean for our nation."
  haiti.11.a: "Consequences Will Soon be Seen..."
@@ -598,4 +598,4 @@
  mali.1003.a: "Peace in Kidal..."
  mali.1004.t: "End of the Malian Civil War"
  mali.1004.d: "The dust has settled and with thousands of dead and tens of thousands displaced the Malian Civil War has come to its natural conclusion. The fighting within the country has largely died down to petty squabbles and limited fighting amongst splinter factions and rogue elements of the military. Peace has been restored in much of the territories of Mali and another chapter has been written in the history of Mali."
- mali.1004.a: "Peace at Last..."
+ mali.1004.a: "La paix, enfin."
