--- a/localisation/french/MD_decisions_l_french.yml
+++ b/localisation/french/MD_decisions_l_french.yml
@@ -30,7 +30,7 @@
  HUN_nationalist_claims_UKR: "Revendiquer les Carpates hongroises"
  HUN_nationalist_claims_UKR_desc: "La population hongroise d'Ukraine souffre depuis trop longtemps. Nous devons rechercher la réunification avec eux."
  NOR_nationalist_claims_DEN: "Revendiquer le Grønland et les Færøyene"
- NOR_nationalist_claims_DEN_desc: "Ayant toujours été des parties historiques de la Norvège, nos possessions ont été illégalement remises [DEN.GetNameWithFlag] par [SWE.GetNameWithFlag]. Pas cool. Il devrait être évident que nous voulons les récupérer."
+ NOR_nationalist_claims_DEN_desc: "Grønland et Færøyene sont toujours des parties historiques de la Norvège, mais nos possessions ont été illégalement cédées à [DEN.GetNameWithFlag] par [SWE.GetNameWithFlag]. Ce n'est pas cool. Il devrait aller de soi que nous souhaitons leur retour."
  NOR_nationalist_claims_ENG: "Revendiquer les Shetland"
  NOR_nationalist_claims_ENG_desc: "Les Shetland sont culturellement plus proches de la Norvège que de l'Écosse ou [ENG.GetNameWithFlag]. Ils seraient plus heureux sous nos ordres."
  NOR_nationalist_claims_SCO: "Revendiquer les Shetland"
