--- a/localisation/french/MD_focus_African_Union_l_french.yml
+++ b/localisation/french/MD_focus_African_Union_l_french.yml
@@ -1,5 +1,5 @@
 ﻿l_french:
- african_union_common_political_agenda: "African Union: Common Political Agenda"
+ african_union_common_political_agenda: "Agenda politique commun de l'Union africaine"
  african_union_common_political_agenda_desc: "The members of the African Union have agreed on a common political agenda and framework for the unification of Africa."
  african_union_child_welfare: "African Union: Child Welfare"
  african_union_child_welfare_desc: "The members of the African Union have agreed to improve child mortality rates and child welfare across all of Africa."
