--- a/localisation/french/MD_focus_BUL_l_french.yml
+++ b/localisation/french/MD_focus_BUL_l_french.yml
@@ -341,7 +341,7 @@
  bul_ACDI.1.c: "We can offer Alternative help."
  bul_ACDI.2.t: "They accepted our offer."
  bul_ACDI.2.d: "They will join our pact."
- bul_ACDI.2.a: "Wonderful"
+ bul_ACDI.2.a: "Merveilleux !"
  bul_ACDI.3.t: "They refused to join our pact."
  bul_ACDI.3.d: "They refused to join our pact and fight alongside us."
  bul_ACDI.3.a: "Ouch"
@@ -446,7 +446,7 @@
  bul_mech.11.b: "No, thanks"
  bul_mech.12.t: "Macedonia Wants investments"
  bul_mech.12.d: "Macedonia accpeted our offer."
- bul_mech.12.a: "Wonderful"
+ bul_mech.12.a: "Merveilleux !"
  bul_mech.12.b: "On other thought..."
  bul_mech.13.t: "Macedonia denies"
  bul_mech.13.d: "Macedonia denied our offer."
