--- a/localisation/french/MD_focus_GEO_l_french.yml
+++ b/localisation/french/MD_focus_GEO_l_french.yml
@@ -384,7 +384,7 @@
  georg.3.b: "Sorry, no"
  georg.4.t: "Armenia agrees!"
  georg.4.d: "Armenia agreed to the pact."
- georg.4.a: "Wonderful"
+ georg.4.a: "Merveilleux !"
  georg.5.t: "Armenia denied!"
  georg.5.d: "Armenia denied our pact proposal."
  georg.5.a: "Eh..."
@@ -469,11 +469,11 @@
  georg_war2008.3.t: "Ukrainian Volunteers in Georgia"
  georg_war2008.3.d: "Many Ukrainian volunteers from the Army and military veterans from the UNA-UNSO Organization decided to respond to the call for help from Georgia and joined the Georgian Armed Forces, creating volunteer battalions."
  georg_war2008.3.a: "Intéressant"
- georg_war2008.3.b: "Wonderful"
+ georg_war2008.3.b: "Merveilleux !"
  georg_war2008.4.t: "Chechen Volunteers in Georgia."
  georg_war2008.4.d: "Many Chechen fighters of free Ichkeria decided to join the side of Georgia and create a nation. battalions in the Georgian army."
  georg_war2008.4.a: "Ugh, traitors."
- georg_war2008.4.b: "Wonderful"
+ georg_war2008.4.b: "Merveilleux !"
  GEO_pmc_help: "Help from PMC's"
  georg_war2008.5.t: "Georgia proposes an Agreement."
  georg_war2008.5.d: "Georgia wants to offer us a full-fledged agreement on Abkhazia and South Ossetia, under which they will renounce their claims and recognize the unrecognized republics. This is good, of course, but we must not allow Georgia to enter NATO after that..."
