--- a/localisation/french/MD_focus_POL_l_french.yml
+++ b/localisation/french/MD_focus_POL_l_french.yml
@@ -1836,7 +1836,7 @@
  poland.146.a: "Good people!"
  poland.147.t: "Activists Criticize Swedish Neutrality"
  poland.147.d: "Some in Sweden have enough that their country is remaining neutral for so long. The Swedes were joined by the Finns, who hope that thanks to our interventionist policy, Finland will finally regain the areas of the Mannerheim Line."
- poland.147.a: "Wonderful"
+ poland.147.a: "Merveilleux !"
  poland.148.t: "ZKP-P Politician Murdered!"
  poland.148.d: "An activist of the communist party ZKP-P was shot this morning while traveling in his car through the streets of Warsaw. The murderer managed to escape from the crime scene, and the police are helpless, having no clues who did that terrifying crime."
  poland.148.a: "They'll regret it!"
