--- a/localisation/french/MD_focus_SOV_l_french.yml
+++ b/localisation/french/MD_focus_SOV_l_french.yml
@@ -1,32 +1,32 @@
 ﻿l_french:
  russia_focus: "Priorités nationales russe"
- SOV_reign_of_yeltsin: "The Reign of Boris Yeltsin"
- SOV_reign_of_yeltsin_desc: "Boris Yeltsin was the first President of the newly-created Russian Federation, the successor state to the USSR, from 1991 to 1999. He presided over huge economic trouble and a disastrous war in Chechnya, and on December 31st, 1999, handed his post over to Prime Minister Vladimir Putin."
- SOV_presidential_election_of_2000: "The 2000 Elections"
- SOV_presidential_election_of_2000_desc: "The era of Boris Yeltsin ended on 31 December 1999, when he de facto passed power to his designated political heir, Vladimir Putin. Putin, with fresh support from the victory over the Chechens, now aims to fortify his political legitimacy with a Presidential Election in March 2000."
- SOV_groznyy_offensive: "Groznyy Offensive"
+ SOV_reign_of_yeltsin: "Le règne de Boris Yeltsin"
+ SOV_reign_of_yeltsin_desc: "De 1991 à 1999 Boris Yeltsin était le premier président de la nouvellement fondée Fédération de Russie, l'état successeur à l'URSS. Il a présidé pendant un temps de grands problèmes économiques et une guerre désastreuse en Tchétchénie, et, le 31 Décembre 1999, il laissa son poste au premier ministre Vladimir Poutine. "
+ SOV_presidential_election_of_2000: "Les élections de 2000"
+ SOV_presidential_election_of_2000_desc: "L'ère de de Boris Yeltsin c'est terminée le 31 Décembre 1999, quand il a passé le pouvoir a son héritier politique désigne, Vladimir Poutine. Poutine, avec un nouveau support grâce à sa victoire sur les Tchéchènes, vise désormais à fortifier sa légitimité politique avec une élection présidentielle en Mars 2000."
+ SOV_groznyy_offensive: "L'offensive de Groznyï"
  SOV_groznyy_offensive_desc: "The Second Chechen War begun in August of 1999, when Chechen fighters, whose state, Ichkeria, enjoyed de facto independence since the First Chechen War of 1996, began with a large-scale military infiltration of the neighboring Dagestan province. The Russian military's retaliation has resulted in a siege of the Chechen capital city of Grozny. The city is likely to fall by late January or early February."
- SOV_putin: "Vladimir Putin"
+ SOV_putin: "Vladimir Poutine"
  SOV_putin_desc: "Vladimir Putin, born in Leningrad and former intelligence officer in the (KGB), briefly served as director of the (FSB) and secretary of the Security Council, before being appointed as prime minister in August 1999. with his knowledge and experience in foreign intelligence, Putin is by far one of the strongest candidates that can rule Russia in these troublesome times, if not the strongest."
- SOV_gazprom: "Regulate Gazprom"
+ SOV_gazprom: "Réguler Gazprom"
  SOV_gazprom_desc: "A previously developed domestic gas industry by the USSR, Gazprom is now a failing company with no capable chairmen. to gain control over Russia's oligarchs, and increase our state's control in most needed companies, we should replace disloyal and corrupt chairmen of Gazprom with capable statesmen. Shareholders of Hermitage Capital Management and the finance minister will aid us."
  SOV_the_grand_bargain: "The Grand Bargain"
  SOV_the_grand_bargain_desc: "Russia is currently under control of oligarchs. If we are to obtain any real power within the country, we must give them an offer they can't refuse."
- SOV_lukoil: "Expand Lukoil"
+ SOV_lukoil: "Développer Lukoil"
  SOV_lukoil_desc: "Lukoil is a state-owned oil company founded by the USSR in 1991, just before its official dissolution. Further investment in Lukoil will expand oil production and help grow our struggling economy."
  SOV_forced_oil_mergers: "Forced Oil Mergers"
  SOV_forced_oil_mergers_desc: "Our oil and gas industry is currently controlled by various enterprises and parties. If we are to get the oligarchs under control, we must first force them to work together and increase the efficiency of oil production."
  SOV_forced_mining_mergers: "Forced Mining Mergers"
  SOV_forced_mining_mergers_desc: "Mining is a critical industry, and it has been balkanized by greedy oligarchs for their own gain since the downfall of the USSR. We must bring all these entities under our control to ensure the survival of our nation and to increase production efficiency."
- SOV_expand_mining_sector: "Expand The Mining Sector"
+ SOV_expand_mining_sector: "Développer le Secteur Minier"
  SOV_expand_mining_sector_desc: "Mining is one of the largest industries in Russia, accounting for a large percentage of the world’s mineral products, commodities, metals, oil, and gas. we should expand the job opportunities and open foreign investments, it'll be a long way but The bigger the mining sector, the stronger the economy, and a stronger economy means a once again strong Russia!"
- SOV_putinism: "Putinism"
+ SOV_putinism: "Poutinisme"
  SOV_putinism_desc: "Although Putin has no official ideology guiding him, his system of government, where power is held by oligarchs and ex-military officers (known as \"siloviki\"), has come to be defined as 'Putinism'."
- SOV_found_rosatom: "Found Rosatom"
+ SOV_found_rosatom: "Financer Rosatom"
  SOV_found_rosatom_desc: "Rosatom is the state nuclear energy corporation of Russia. It controls the Russian nuclear-industrial complex."
  SOV_empower_siloviki: "Empower the Siloviki"
  SOV_empower_siloviki_desc: "'Silovik' is a Russian term for ex-military, ex-intelligence officers and soldiers who later seize power and become politicans. By empowering such men, we can ensure high-level agreement on the important things."
- SOV_arctic_gas_exploration: "Arctic Gas Exploration"
+ SOV_arctic_gas_exploration: "Exploration du Gaz Arctique"
  SOV_arctic_gas_exploration_desc: "The Arctic regions contain vast reserves of natural gas. We can become energy independent and a net exporter of energy if we simply tap into such reserves."
  SOV_ensure_oligarch_submission: "Ensure Oligarch Submission"
  SOV_ensure_oligarch_submission_desc: "Under Boris Yeltsin, Russia became the biggest mafia state in the world. The oligarchs especially were a major contributor to the economic madness that was the 90s. To keep this from happening again, we need to show the oligarchs who's boss."
@@ -34,21 +34,21 @@
  SOV_remove_guzinsky_desc: "Vladimir Guzinsky is a huge media mogul, yet he refuses to cooperate with the government and oligarchs. We need to deal with him."
  SOV_delay_sibirneft_merger: "Delay Sibneft Merger"
  SOV_delay_sibirneft_merger_desc: "In April 2003, Yukos Oil CEO Mikhail Khodorkovsky announced that Yukos would merge with Sibneft, creating an oil company with reserves equal to those of Western petroleum multinationals. But the powers-that-be decided that he would not be the person to do so, fabricating charges of corruption and tax evasion."
- SOV_gen_3_nuclear_plants: "Generation 3+ Nuclear Reactors"
+ SOV_gen_3_nuclear_plants: "Réacteurs nucléaires de troisième génération"
  SOV_gen_3_nuclear_plants_desc: "Gen III+ reactor designs are an evolutionary development of Gen III reactors, offering improvements in safety over Gen III reactor designs. Manufacturers began development of Gen III+ systems in the 1990s by building on the operating experience of the American, Japanese, and Western European light-water reactor."
- SOV_khodorkovsky_case: "The Khodorkovsky Case"
+ SOV_khodorkovsky_case: "Le cas de Khodorkovsky"
  SOV_khodorkovsky_case_desc: "With charges of corruption and tax evasion mounting, it is increasingly likely that Mikhail Khodorkovsky will be convicted and conveniently lose his shares in Yukos Oil."
- SOV_revision_6: "Revision Number 6"
+ SOV_revision_6: "Révision numéro 6"
  SOV_revision_6_desc: "Revision Number 6 is a law that gives the government full right and authority to spy on all communications within the country."
  SOV_new_waste_repository: "A New Waste Repository"
  SOV_new_waste_repository_desc: "A nuclear state like ours requires a new permanent waste isolation facility somewhere far away from all civilization. Somewhere in Siberia, perhaps? Or Semipalatinsk?"
- SOV_state_corporatism: "State Corporatism"
+ SOV_state_corporatism: "Corporatisme d'Etat"
  SOV_state_corporatism_desc: "Russia has a large number of corporations whose CEOs and other major officials are also in the government. Let's take this all the way and unite the state and corporation into one entity. All business will be transacted according to the whims of the state."
  SOV_seize_yukos_oil: "Seize Yukos Oil"
  SOV_seize_yukos_oil_desc: "Now that Khodorkovsky is out of the way, we can seize the Yukos Oil corporation and divvy it up between our more loyal subjects."
- SOV_khodorkovsky_trial: "The Khodorkovsky Trials"
+ SOV_khodorkovsky_trial: "Les procès de Khodorkosvky"
  SOV_khodorkovsky_trial_desc: "Now that we have a sufficient case against Khodorkovsky, we can take him to court, though we all know which way the verdict will go."
- SOV_2004_election: "The 2004 Elections"
+ SOV_2004_election: "Les élections de 2004"
  SOV_2004_election_desc: "The 2004 Russian election was a landslide victory for incumbent Vladimir Putin. For a Russian election, there was shockingly little government interference with the actual process. However, state TV devoted significantly more airtime to positive coverage of Putin, and he lacked any real opposition, winning with 71.9% of the vote. The runner-up, a candidate from the CPRF, won 13.8% of the vote."
  SOV_establish_petrostate: "Establish the Petrostate"
  SOV_establish_petrostate_desc: "Russia is the world's second-largest producer of oil and notably outside the reach of the OPEC cartel. We can leverage our natural resources to fund the government."
@@ -1419,7 +1419,7 @@
  russia.12.d1: "[From.GetName] accepts our proposal. We should quickly begin to take control over the local governments and bring stability to the region. The Abkhazian government has decided to integrate themselves and cooperate closely with our envoys to support the occupying forces."
  russia.12.t2: "[From.GetName] Accepts!"
  russia.12.d2: "[From.GetName] accepts our proposal. We should quickly begin to take control over the local governments and bring stability to the region. The South Ossetian government has decided to integrate themselves and cooperate closely with our envoys to support the occupying forces."
- russia.12.o1: "Wonderful"
+ russia.12.o1: "Merveilleux !"
  russia.13.t1: "[From.GetName] Refuses!"
  russia.13.d1: "[From.GetName] refuses our integration! How dare they! Prepare the troops in the region. The rebellious pseudo-republics need to be reminded who their benefactor is."
  russia.13.t2: "[From.GetName] Refuses!"
@@ -2289,7 +2289,7 @@
  rusboloto.2.b: "Ugh, fine."
  rusboloto.3.t: "Protests were handled by the police."
  rusboloto.3.d: "Protests have failed to achieve their goal."
- rusboloto.3.a: "Wonderful"
+ rusboloto.3.a: "Merveilleux !"
  sov_other.1.t: "Zhirinovsky elected as President"
  sov_other.1.d: "During recent change in Russian government Nationalistic party LDPR was elected with their leader Vladimir Zhirinovsky as new President. They announced a new political program that would radically change Russia. One of the first reforms they promise is the return of the old flag and a new course towards a conservative nationalist agenda..."
  sov_other.1.a: "What awaits Russia?"
@@ -2345,7 +2345,7 @@
  sov_other.13.b: "Sorry, no"
  sov_other.14.t: "Ukraine accepted our proposal!"
  sov_other.14.d: "Ukraine accepted our proposal!"
- sov_other.14.a: "Wonderful"
+ sov_other.14.a: "Merveilleux !"
  sov_other.15.t: "Ukraine denied our proposal!"
  sov_other.15.d: "Ukraine denied our proposal!"
  sov_other.15.a: "Why?"
