--- a/localisation/french/MD_focus_TUR_l_french.yml
+++ b/localisation/french/MD_focus_TUR_l_french.yml
@@ -1820,7 +1820,7 @@
  TurkeyFocusEvents.212.b: "Absolutely not!"
  TurkeyFocusEvents.213.t: "Karabakh dispute settled!"
  TurkeyFocusEvents.213.d: "Great news has arrived from the Armenian embassy, as the diplomats let us know they had agreed to the terms set in our settlement regarding the Karabakh region!"
- TurkeyFocusEvents.213.a: "Wonderful"
+ TurkeyFocusEvents.213.a: "Merveilleux !"
  TurkeyFocusEvents.214.t: "Karabakh dispute continues.."
  TurkeyFocusEvents.214.d: "Unfortunately it seems the Karabakh dispute will continue to harm Azeri and Armenian relations, as both sides have failed to come to an agreement.."
  TurkeyFocusEvents.214.a: "Quite unfortunate.."
