--- a/localisation/french/MD_focus_USA_l_french.yml
+++ b/localisation/french/MD_focus_USA_l_french.yml
@@ -1562,7 +1562,7 @@
  usa.2000.o2: "Inshallah! Allah Meant for This to Happen!"
  usa.2001.t: "[From.GetName] Pays Damages"
  usa.2001.d: "[From.GetName] pays the United States $250 Million in the effort to repair and refit the USS Cole after the tragic bombing. The USS Cole will once again float.\n"
- usa.2001.o1: "Wonderful"
+ usa.2001.o1: "Merveilleux !"
  usa.2002.t: "[From.GetName] Refuses to Pay for Damages"
  usa.2002.d: "[From.GetName] states they had nothing to do with the USS Cole Bombing. They have stated many times that they are not to blame for the damages caused to the USS Cole. [From.GetName] are beginning to make accusations that we are just out to get them. Pfft, why would we be out to get them?\n"
  usa.2002.o1: "Disappointing, I needed a new car."
