--- a/localisation/french/equipment_l_french.yml
+++ b/localisation/french/equipment_l_french.yml
@@ -9092,3 +9092,8 @@
  NOR_infantry_weapons6: "HK416NM 6.8"
  NOR_infantry_weapons6_short: "HK416NM 6.8"
  NOR_infantry_weapons7: "AIF 40"
+ nsb_attack_helicopter_tech_1: "Hélicoptère d'attaque de 1ère génération"
+ nsb_attack_helicopter_tech_2: "Hélicoptère d'attaque de 2ème génération"
+ nsb_attack_helicopter_tech_3: "Hélicoptère d'attaque de 3ème génération"
+ nsb_attack_helicopter_tech_4: "Hélicoptère d'attaque de 4ème génération"
+ nsb_attack_helicopter_tech_5: "Hélicoptère d'attaque de 5ème génération"
