--- a/localisation/polish/MD_decisions_l_polish.yml
+++ b/localisation/polish/MD_decisions_l_polish.yml
@@ -30,7 +30,7 @@
  HUN_nationalist_claims_UKR: "Zajmij węgierskie Karpaty"
  HUN_nationalist_claims_UKR_desc: "Ludność węgierska na Ukrainie cierpiała zbyt długo. Musimy dążyć do ponownego zjednoczenia z nimi."
  NOR_nationalist_claims_DEN: "Odzyskaj Grønland i Færøyene"
- NOR_nationalist_claims_DEN_desc: "Zawsze historyczne części Norwegii, nasz majątek został nielegalnie przekazany [DEN.GetNameWithFlag] przez [SWE.GetNameWithFlag]. Nie fajnie. Powinno być oczywiste, że chcemy ich z powrotem."
+ NOR_nationalist_claims_DEN_desc: "Grønland i Færøyene zawsze były historycznymi częściami Norwegii, ale nasz majątek został nielegalnie przekazany [DEN.GetNameWithFlag] przez [SWE.GetNameWithFlag]. To nie jest fajne. Powinno być oczywiste, że chcemy ich z powrotem."
  NOR_nationalist_claims_ENG: "Zajmij Szetlandy"
  NOR_nationalist_claims_ENG_desc: "Szetlandy są kulturowo bliższe Norwegii niż Szkocji czy [ENG.GetNameWithFlag]. Byliby szczęśliwsi pod nami."
  NOR_nationalist_claims_SCO: "Zajmij Szetlandy"
