--- a/localisation/polish/MD_focus_BLR_l_polish.yml
+++ b/localisation/polish/MD_focus_BLR_l_polish.yml
@@ -188,7 +188,7 @@
  BLR_peleng_for_russia: "Sprzęt przeciwpancerny"
  BLR_peleng_for_russia_desc: "Jesteśmy gotowi do uruchomienia produkcji wyposażenia dla rosyjskiego ppk"
  BLR_peleng_for_ukr: "Sprzęt przeciwpancerny"
- BLR_peleng_for_ukr_desc: "We are ready to launch the production of equipment for the Ukrainian ATGM"
+ BLR_peleng_for_ukr_desc: "Jesteśmy gotowi rozpocząć produkcję wyposażenia dla ukraińskiego ppk"
  BLR_sosna_u: "TPV „Sosna-U”"
  BLR_sosna_u_desc: "Wielokanałowy celownik termowizyjny strzelca, opracowany przez białoruskich konstruktorów firmy „Peleng”"
  BLR_558_zavod: "558 Zakład Naprawy Samolotów"
@@ -2336,5 +2336,5 @@
  ARM_armenia_ready_union_state: "§Y[?ARM.union_state|-0]§!"
  ARM_armenia_readys_union_state: "§YProcent§! z §Y[ARM.GetNameWithFlag]§! gotowość do integracji z §YPaństwem Związkowym§!"
  ARM_armenia_notreadys_union_state: "§RNIEDOSTĘPNE§!"
- BLR_constitution_BSSR: "The Constitution Of BSSR"
- BLR_constitution_BSSR_desc: "To begin with, it is necessary to restore the Constitution of the BSSR"
+ BLR_constitution_BSSR: "Konstytucja Białoruska Socjalistyczna Republika Radziecka"
+ BLR_constitution_BSSR_desc: "Na początek konieczne jest przywrócenie Konstytucji Białoruska Socjalistyczna Republika Radziecka"
