--- a/localisation/polish/MD_focus_CHI_l_polish.yml
+++ b/localisation/polish/MD_focus_CHI_l_polish.yml
@@ -1442,7 +1442,7 @@
  declare_independence_taiwan_desc: "Tajwan to nie Chiny. Oznacza to, że nie jest ani częścią PRL, jak twierdzi KPCh, ani tymczasową bastionem rządu Republiki Chińskiej, jak twierdzi KMT i jej sojusznicy. W związku z tym powinniśmy ogłosić naszą niepodległość i starać się pozyskać międzynarodowe poparcie dla naszego statusu najnowszego narodu na świecie."
  recalculate_coalition_support_taiwan: "Zaktualizuj całkowite wartości wsparcia"
  southwest_hydroelectricity_dev_category: "Rozwój energetyki wodnej na południowym zachodzie"
- southwest_hydroelectricity_dev_category_desc: "Ze względu na stosunkowo opóźniony regionalny rozwój gospodarczy, południowo-zachodnie zasoby energetyczne mojego kraju, zwłaszcza obfite zasoby energii wodnej, nie są w pełni rozwinięte."
+ southwest_hydroelectricity_dev_category_desc: "Ze względu na stosunkowo opóźniony regionalny rozwój gospodarczy, zasoby energetyczne południowo-zachodnich Chin nie są ogólnie w pełni rozwinięte, zwłaszcza obfite zasoby energii wodnej."
  construction_jinshajiang_dam: "Budowa elektrowni wodnej na rzece Jinsha"
  construction_jinshajiang_dam_desc: "Rzeka Jinsha znajduje się w górnym biegu rzeki Jangcy i posiada obfite zasoby wodne. Jest bardzo odpowiedni do budowania projektów oszczędzania wody, aby złagodzić nasz obecny niedobór zasobów."
  construction_yalongjiang_dam: "Budowa elektrowni wodnej na rzece Yalong"
