--- a/localisation/polish/MD_focus_UKR_l_polish.yml
+++ b/localisation/polish/MD_focus_UKR_l_polish.yml
@@ -2551,4 +2551,6 @@
  UKR_concers: "Koncern obronny Charkowa"
  UKR_concers_desc: "Połączymy wszystkie nasze przedsiębiorstwa przemysłu zbrojeniowego w jeden koncern. W ten sposób wzmocnimy koordynację produkcji i zwiększymy produktywność."
  UKR_concern: "Charków Przemysłu Wojskowego"
- UKR_zelenskiy_pizdec_TT: "§RWykonanie tej sztuczki spowoduje powtórkę wydarzeń z serii: Sługa Ludu. Ukraina będzie podzielona!!!!§!"
+ UKR_zelenskiy_pizdec_TT: "§RUkończenie tego skupienia spowoduje powtórkę wydarzeń z serii: Sługa Ludu. Ukraina będzie podzielona!!!!§!"
+ UKR_zaporozhia_gold: "Kopalnia Złota Mużiewo"
+ UKR_zaporozhia_gold_desc: "Wreszcie przyciągniemy inwestorów i zaczniemy zagospodarowywać te kopalnie ze złóż złota"
