--- a/localisation/russian/MD_dynamic_scripting_l_russian.yml
+++ b/localisation/russian/MD_dynamic_scripting_l_russian.yml
@@ -111,7 +111,6 @@
  script.0.wahabi_ulema: "§YВаххабитские улемы§! "
  script.0.the_military: "§YВоенные§! "
  script.0.intelligence_community: "§YРазведывательные службы§! "
- script.0.isi_pakistan: "§YПМР§! "
  script.0.VEVAK: "§YVEVAK§! "
  script.0.the_bazaar: "§YВосточный базар§! "
  script.0.the_donju: "§YДонжу§! "
@@ -1981,3 +1980,5 @@
  script.0.FAO_GetNameWithFlag: "[FAO.GetNameWithFlag]"
  script.0.FAO_GetLeader: "[FAO.GetLeader]"
  script.0.FAO_GetAdjective: "[FAO.GetAdjective]"
+ script.0.QTF_GetAdjective: "[QTF.GetAdjective]"
+ script.0.LUR_GetAdjective: "[LUR.GetAdjective]"
