--- a/localisation/russian/MD_focus_CHI_l_russian.yml
+++ b/localisation/russian/MD_focus_CHI_l_russian.yml
@@ -1438,7 +1438,7 @@
  declare_independence_taiwan_desc: "Тайвань - это не Китай. Это означает, что он не является ни частью Народной Республики, как заявляет КПК, ни временным оплотом правительства Китайской Республики, как заявляют Гоминьдан и их союзники. Таким образом, мы должны провозгласить свою независимость и стремиться заручиться международной поддержкой нашего статуса новейшего государства в мире."
  recalculate_coalition_support_taiwan: "Обновить общие значения поддержки"
  southwest_hydroelectricity_dev_category: "Развитие гидроэнергетики на Юго-Западе"
- southwest_hydroelectricity_dev_category_desc: "Из-за относительно медленного регионального экономического развития энергетические ресурсы юго-запада моей страны в целом не полностью освоены, особенно богатые гидроэнергетические ресурсы."
+ southwest_hydroelectricity_dev_category_desc: "Из-за относительного отставания регионального экономического развития энергетические ресурсы юго-запада Китая в целом не полностью освоены, особенно богатые гидроэнергетические ресурсы."
  construction_jinshajiang_dam: "Строительство гидроэлектростанции на реке Цзиньша"
  construction_jinshajiang_dam_desc: "Река Цзиньша расположена в верховьях реки Янцзы и имеет богатые водные ресурсы. Он очень подходит для строительства проектов по сохранению водных ресурсов, чтобы облегчить нашу текущую нехватку ресурсов."
  construction_yalongjiang_dam: "Строительство гидроэлектростанции на реке Ялун"
