--- a/localisation/russian/MD_focus_ITA_l_russian.yml
+++ b/localisation/russian/MD_focus_ITA_l_russian.yml
@@ -2457,11 +2457,6 @@
  ITA_tech_deal: "Техническая сделка"
  ITA_restart_otomatic_development: "Перезапуск разработки OTOMATIC"
  ITA_restart_otomatic_development_desc: "Перезапуск разработки OTOMATIC"
- ITA_ITA_modify_article_18: "Изменить статью 18"
- ITA_ITA_modify_article_18_desc: "Статья 18 Статута работников чрезвычайно затрудняет работодателям увольнение своих сотрудников, и соответственно пострадал наш рынок труда. Его изменение, несомненно, послужит толчком для обвинений оппозиции в «принудительном труде» и «рабстве», но на самом деле это всего лишь здравый смысл."
- ITA_ITA_modify_article_18_decision: "Изменить статью 18"
- ITA_ITA_modify_article_18_decision_desc: "Статья 18 Статута работников чрезвычайно затрудняет работодателям увольнение своих сотрудников, и соответственно пострадал наш рынок труда. Его изменение, несомненно, послужит толчком для обвинений оппозиции в «принудительном труде» и «рабстве», но на самом деле это всего лишь здравый смысл."
- ITA_ITA_modify_article_18_decision_repeal: "Откатить изменения статьи 18"
  ITA_modify_additional_expenses_effect_TT: "This will modify our weekly expenses by: [?additional_expenses_change|-] bilions\n"
  ITA_modify_nimby_modifier_effect_TT: "This will modify the effect of NIMBYs by: [?nimby_culture_change|%+]\n"
  ITA_modify_tax_gain_multiplier_modifier_effect_TT: "§YTax Revenue Multiplier§!: [?ITA_tax_gain_multiplier_modifier_change|%+] \n"
@@ -2528,3 +2523,8 @@
  ITA_modify_energy_gain_TT: "§YPower Generated§!: [?ITA_energy_gain_change|+] GW\n"
  ITA_modify_reform_expectance_effect_TT: "§YReform Expectance§!: [?drift_switch_change|3+]\n"
  ITA_treaty_of_benghazi_TT: "The §YTreaty of Benghazi§! has been signed with [LBA.GetNameWithFlag]"
+ ITA_modify_article_18: "Изменить статью 18"
+ ITA_modify_article_18_desc: "Статья 18 Статута работников чрезвычайно затрудняет работодателям увольнение своих сотрудников, и соответственно пострадал наш рынок труда. Его изменение, несомненно, послужит толчком для обвинений оппозиции в «принудительном труде» и «рабстве», но на самом деле это всего лишь здравый смысл."
+ ITA_modify_article_18_decision: "Изменить статью 18"
+ ITA_modify_article_18_decision_desc: "Статья 18 Статута работников чрезвычайно затрудняет работодателям увольнение своих сотрудников, и соответственно пострадал наш рынок труда. Его изменение, несомненно, послужит толчком для обвинений оппозиции в «принудительном труде» и «рабстве», но на самом деле это всего лишь здравый смысл."
+ ITA_modify_article_18_decision_repeal: "Откатить изменения статьи 18"
