--- a/localisation/russian/MD_focus_UKR_l_russian.yml
+++ b/localisation/russian/MD_focus_UKR_l_russian.yml
@@ -2551,4 +2551,6 @@
  UKR_concers: "Харьковский оборонный концерн"
  UKR_concers_desc: "Мы объединим все наши предприятия военной промышленности в один концерн. Таким образом, мы усилим координацию производства и повысим производительность труда."
  UKR_concern: "Харьков Военно-промышленный комплекс"
- UKR_zelenskiy_pizdec_TT: "§RВыполнение этого трюка вызовет повторение событий сериала: Слуга народа. Украина будет раздроблена!!!!§!"
+ UKR_zelenskiy_pizdec_TT: "§RЗавершение этого фокуса вызовет повторение событий сериала: Слуга народа. Украина будет раздроблена!!!!§!"
+ UKR_zaporozhia_gold: "Мужиевский золотой рудник"
+ UKR_zaporozhia_gold_desc: "Мы наконец-то привлечем инвесторов и начнем разрабатывать эти рудники с месторождениями золота."
