--- a/localisation/russian/MD_focus_USA_l_russian.yml
+++ b/localisation/russian/MD_focus_USA_l_russian.yml
@@ -2517,17 +2517,17 @@
  USA_green_gala_guardian: "Зеленый Гала-Хранитель"
  USA_green_gala_guardian_desc: "Исследуйте влияние праздника на окружающую среду, исследуя его роль хранителя экологического баланса и устойчивости."
  USA_artsy_arboreal_vibes: "Artsy Arboreal Vibes"
- USA_artsy_arboreal_vibes_desc: "Immerse yourself in the artistic expressions inspired by the event, where creativity converges with American visual arts."
+ USA_artsy_arboreal_vibes_desc: "Погрузитесь в художественное самовыражение, вдохновленное этим событием, где творчество сходится с американским изобразительным искусством."
  USA_fiesta_foliage: "Fiesta Foliage"
  USA_fiesta_foliage_desc: "Explore the starring role of the celebration in festive traditions, where twinkling lights and holiday spirit converge in a celebration of community."
  USA_community_canopy_connection: "Community Canopy Connection"
- USA_community_canopy_connection_desc: "Lift the veil on the celebration's role as a community hub, drawing people together for shared moments and celebrations."
- USA_chronicles_of_celebration: "Chronicles of Celebration"
- USA_chronicles_of_celebration_desc: "Time-travel through historical events linked to the celebration, unveiling stories that have shaped its narrative over the years."
- USA_civic_celebration_station: "Civic Celebration Station"
- USA_civic_celebration_station_desc: "Discover how the celebration sparks civic pride and participation, turning ordinary gatherings into extraordinary community events."
- USA_feast_treats: "Feast Treats"
- USA_feast_treats_desc: "Savor the flavors of culinary traditions tied to the celebration, where recipes and festivities blend in a mouthwatering celebration."
+ USA_community_canopy_connection_desc: "Приподнимите завесу над ролью праздника как общественного центра, объединяющего людей для совместных моментов и торжеств."
+ USA_chronicles_of_celebration: "Хроники торжества"
+ USA_chronicles_of_celebration_desc: "Путешествуйте во времени по историческим событиям, связанным с празднованием, и раскрывайте истории, которые формировали его повествование на протяжении многих лет."
+ USA_civic_celebration_station: "Станция Гражданского Праздника"
+ USA_civic_celebration_station_desc: "Узнайте, как праздник вызывает гражданскую гордость и участие, превращая обычные собрания в необычайные общественные мероприятия."
+ USA_feast_treats: "Праздничные угощения"
+ USA_feast_treats_desc: "Насладитесь вкусом кулинарных традиций, связанных с этим праздником, где рецепты и праздники сливаются в аппетитный праздник."
  USA_edu_tainment_extravaganza: "Edu-Tainment Extravaganza"
  USA_edu_tainment_extravaganza_desc: "Step into the educational spotlight with programs that make learning about the celebration a joyous and enlightening experience."
  USA_conservation_couture: "Conservation Couture"
