--- a/localisation/simp_chinese/MD_custom_achievements_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_custom_achievements_l_simp_chinese.yml
@@ -5,9 +5,9 @@
  started_millennium_dawn_NAME: "现代之路"
  started_millennium_dawn_DESC: "感谢您游玩千禧黎明！请继续关注我们！"
  conquer_taiwan_as_china_NAME: "征服台湾"
- conquer_taiwan_as_china_DESC: "作为中华人民共和国征服台湾，该岛将再次属于我们。"
+ conquer_taiwan_as_china_DESC: "作为中华人民共和国征服台湾，天无二日。"
  annex_mongolia_as_china_NAME: "吞并蒙古"
- annex_mongolia_as_china_DESC: "作为中华人民共和国吞并蒙古，草原将再次属于我们。"
+ annex_mongolia_as_china_DESC: "作为中华人民共和国吞并蒙古，草原再次统一在我们的旗帜之下。"
  control_south_sea_as_china_NAME: "中国南海"
  control_south_sea_as_china_DESC: "作为中华人民共和国控制南海的所有岛屿。九段线终将名至实归。"
  reclaim_ambazonia_NAME: "收回安巴佐尼亚"
@@ -17,7 +17,7 @@
  take_back_western_sahara_NAME: "收回西撒哈拉"
  take_back_western_sahara_DESC: "从摩洛哥手中夺回西撒哈拉"
  take_back_the_breakaways_NAME: "归还阿布哈兹和南奥塞梯"
- take_back_the_breakaways_DESC: "阿布哈兹共和国应该回归格鲁吉亚"
+ take_back_the_breakaways_DESC: "阿布哈兹与南奥塞梯应该回归格鲁吉亚"
  end_the_angolan_civil_war_NAME: "结束安哥拉内战"
  end_the_angolan_civil_war_DESC: "作为其中一个派别，结束安哥拉内战"
  end_the_somali_civil_war_NAME: "结束索马里内战"
@@ -228,3 +228,17 @@
  libya_t_posing_DESC: "作为利比亚，拥有提贝斯提和图阿雷格国作为其附属国，同时拥有其所有核心地区。"
  libya_t_posing_TIE_tt: "[TIE.GetNameWithFlag]拥有他们所有核心地区"
  libya_t_posing_TUA_tt: "[TUA.GetNameWithFlag]拥有他们所有核心地区"
+ botswana_naledi_ya_botswana_NAME: "博茨瓦纳之星"
+ botswana_naledi_ya_botswana_DESC: "因杰出服务而获奖；将艾滋病感染率降至最低水平。\n\n“如果博茨瓦纳能够彻底根治艾滋病毒，那么它的未来将无比光明。”\n\n- 科林·萨蒙"
+ botswana_conduct_valour_cross_NAME: "博茨瓦纳国防军行为英勇十字勋章"
+ botswana_conduct_valour_cross_DESC: "因在对抗敌人的行动中表现出的英勇而获颁；与比你强大5倍的国家交战。\n\n“Fatshe leno la rona（愿这片高贵的土地受到祝福）”。\n\n- 博茨瓦纳国歌"
+ botswana_medal_for_meritorious_service_NAME: "博茨瓦纳警察功绩奖章"
+ botswana_medal_for_meritorious_service_DESC: "因特别功绩而获奖；解决津巴布韦难民危机。\n\n“我讨厌罗伯特·穆加贝。他是我见过的最坏的人之一。”\n\n- 鲍勃·霍克"
+ botswana_teachers_silver_jubilee_medal_NAME: "博茨瓦纳教师银禧奖章"
+ botswana_teachers_silver_jubilee_medal_DESC: "奖励服务25年、成绩优异的教师；将识字率提高到90%。\n\n“学无止境。”\n\n——博茨瓦纳谚语"
+ achievement_diamonds_are_a_girls_best_friend_NAME: "钻石是统治者的最好朋友"
+ achievement_diamonds_are_a_girls_best_friend_DESC: "开采超过500单位贵金属。"
+ achievement_botswana_BOTswana_NAME: "机械人瓦纳"
+ achievement_botswana_BOTswana_DESC: "以博茨瓦纳，完成$human_imitation_ai$研究。"
+ achievement_botswana_captain_planet_NAME: "地球超人受够了你的胡闹"
+ achievement_botswana_captain_planet_DESC: "以博茨瓦纳，国内偷猎者为零，并且将卡拉哈里沙漠化程度降至最低。"
