--- a/localisation/simp_chinese/MD_dynamic_scripting_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_dynamic_scripting_l_simp_chinese.yml
@@ -111,7 +111,6 @@
  script.0.wahabi_ulema: "§Y伊斯兰教瓦哈比派宗教领袖§!"
  script.0.the_military: "§Y军方§!"
  script.0.intelligence_community: "§Y情报人员§!"
- script.0.isi_pakistan: "§Y巴基斯坦三军情报局§!"
  script.0.VEVAK: "§Y伊朗情报与国家安全部§!"
  script.0.the_bazaar: "§Y市场§!"
  script.0.the_donju: "§Y金主§!"
@@ -1981,3 +1980,5 @@
  script.0.FAO_GetNameWithFlag: "[FAO.GetNameWithFlag]"
  script.0.FAO_GetLeader: "[FAO.GetLeader]"
  script.0.FAO_GetAdjective: "[FAO.GetAdjective]"
+ script.0.QTF_GetAdjective: "[QTF.GetAdjective]"
+ script.0.LUR_GetAdjective: "[LUR.GetAdjective]"
