--- a/localisation/simp_chinese/MD_focus_CHI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CHI_l_simp_chinese.yml
@@ -1141,7 +1141,7 @@
  declare_independence_taiwan_desc: "台湾不是中国。这意味着它既不是中国共产党所宣称的中华人民共和国的一部分，也不是国民党及其盟友所宣称的中华民国的临时据点。因此，我们应该宣布独立，并寻求国际上对我们作为世界上最新国家地位的支持。"
  recalculate_coalition_support_taiwan: "更新总支持度"
  southwest_hydroelectricity_dev_category: "开发西南水电工程"
- southwest_hydroelectricity_dev_category_desc: "由于地区经济发展相对滞后，我国西南能源资源总体上尚未得到充分开发，特别是丰富的水电资源。"
+ southwest_hydroelectricity_dev_category_desc: "由于地区经济发展相对滞后，中国西南能源资源总体上尚未得到充分开发，特别是丰富的水电资源。"
  construction_jinshajiang_dam: "建设金沙江水力发电工程"
  construction_jinshajiang_dam_desc: "金沙江位于长江上游，水资源丰富。非常适合建设水利工程来缓解我们目前的资源短缺问题。"
  construction_yalongjiang_dam: "建设雅砻江水力发电工程"
