--- a/localisation/simp_chinese/MD_focus_UKR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_UKR_l_simp_chinese.yml
@@ -2551,4 +2551,6 @@
  UKR_concers: "哈尔科夫防务部门"
  UKR_concers_desc: "我们将把所有军工企业整合为一个企业。这样，我们就会加强生产的协调性，提高生产力。"
  UKR_concern: "哈尔科夫军事工业"
- UKR_zelenskiy_pizdec_TT: "§R施展这个伎俩将导致《人民公仆》系列事件的重演。乌克兰将四分五裂！§!"
+ UKR_zelenskiy_pizdec_TT: "§R完成该国策将导致《人民公仆》系列事件的重演。乌克兰将四分五裂！§!"
+ UKR_zaporozhia_gold: "穆日埃沃金矿"
+ UKR_zaporozhia_gold_desc: "我们最终会吸引投资者，开始开发这些含有金矿的矿山。"
