--- a/localisation/simp_chinese/MD_ideas_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_ideas_l_simp_chinese.yml
@@ -769,12 +769,12 @@
  critical_level_of_aids: "艾滋病的危急流行率"
  critical_level_of_aids_desc: "这个国家的人口中有20%到25%的人感染了艾滋病毒。作为一种致命的疾病，这对饱受这种疾病的患者有很大的影响，因为它最终导致他们根本无法工作或过正常生活。抗击艾滋病毒是一个缓慢的过程，唯一真正的方法是持续的高质量医疗保健，以减少患者的痛苦，并且教育人们以减少感染的风险。\n\n[HIV_healthcare_tooltip]"
  critical_level_of_aids_tt: "卫生支出：§R+25%§!"
- HIV_healthcare_tooltip_01: "每年，我们都会收到我国艾滋病毒的最新报告。我们的§Y医疗预算§!越高，情况越可能变好。\n\n我们目前的推测：\n§Y50%§!：情况会变得更糟\n§Y50%§!：情况会保持原样\n§Y0%§!：情况会变得更好§!"
- HIV_healthcare_tooltip_02: "每年，我们都会收到我国艾滋病毒的最新报告。我们的§Y医疗预算§!越高，情况越可能变好。\n\n我们目前的推测：\n§Y40%§!：情况会变得更糟\n§Y50%§!：情况会保持原样\n§Y10%§!：情况会变得更好§!"
- HIV_healthcare_tooltip_03: "每年，我们都会收到我国艾滋病毒的最新报告。我们的§Y医疗预算§!越高，情况越可能变好。\n\n我们目前的推测：\n§Y30%§!：情况会变得更糟\n§Y50%§!：情况会保持原样\n§Y20%§!：情况会变得更好§!"
- HIV_healthcare_tooltip_04: "每年，我们都会收到我国艾滋病毒的最新报告。我们的§Y医疗预算§!越高，情况越可能变好。\n\n我们目前的推测：\n§Y20%§!：情况会变得更糟\n§Y50%§!：情况会保持原样\n§Y30%§!：情况会变得更好§!"
- HIV_healthcare_tooltip_05: "每年，我们都会收到我国艾滋病毒的最新报告。我们的§Y医疗预算§!越高，情况越可能变好。\n\n我们目前的推测：\n§Y10%§!：情况会变得更糟\n§Y50%§!：情况会保持原样\n§Y40%§!：情况会变得更好§!"
- HIV_healthcare_tooltip_06: "每年，我们都会收到我国艾滋病毒的最新报告。我们的§Y医疗预算§!越高，情况越可能变好。\n\n我们目前的推测：\n§Y0%§!：情况会变得更糟\n§Y50%§!：情况会保持原样\n§Y50%§!：情况会变得更好§!"
+ HIV_healthcare_tooltip_01: "每年，我们都会收到我国艾滋病毒的最新报告。我们的§Y医疗预算§!越高，情况越可能变好。\n\n我们目前的推测：\n§Y50%§!：§R情况会变得更糟§!\n§Y50%§!：§W情况会保持原样§!\n§Y0%§!：§G情况会变得更好§!"
+ HIV_healthcare_tooltip_02: "每年，我们都会收到我国艾滋病毒的最新报告。我们的§Y医疗预算§!越高，情况越可能变好。\n\n我们目前的推测：\n§Y40%§!：§R情况会变得更糟§!\n§Y50%§!：§W情况会保持原样§!\n§Y10%§!：§G情况会变得更好§!"
+ HIV_healthcare_tooltip_03: "每年，我们都会收到我国艾滋病毒的最新报告。我们的§Y医疗预算§!越高，情况越可能变好。\n\n我们目前的推测：\n§Y30%§!：§R情况会变得更糟§!\n§Y50%§!：§W情况会保持原样§!\n§Y20%§!：§G情况会变得更好§!"
+ HIV_healthcare_tooltip_04: "每年，我们都会收到我国艾滋病毒的最新报告。我们的§Y医疗预算§!越高，情况越可能变好。\n\n我们目前的推测：\n§Y20%§!：§R情况会变得更糟§!\n§Y50%§!：§W情况会保持原样§!\n§Y30%§!：§G情况会变得更好§!"
+ HIV_healthcare_tooltip_05: "每年，我们都会收到我国艾滋病毒的最新报告。我们的§Y医疗预算§!越高，情况越可能变好。\n\n我们目前的推测：\n§Y10%§!：§R情况会变得更糟§!\n§Y50%§!：§W情况会保持原样§!\n§Y40%§!：§G情况会变得更好§!"
+ HIV_healthcare_tooltip_06: "每年，我们都会收到我国艾滋病毒的最新报告。我们的§Y医疗预算§!越高，情况越可能变好。\n\n我们目前的推测：\n§Y0%§!：§R情况会变得更糟§!\n§Y50%§!：§W情况会保持原样§!\n§Y50%§!：§G情况会变得更好§!"
  research_idea_1: "研究进展"
  PER_aor_advice: "抵抗轴心援助"
  PER_learn_from_the_holy_defence_idea: "神圣防御的教义"
