--- a/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
@@ -3761,23 +3761,21 @@
  LES.Nat_Autocracy_desc: ""
  LES.Monarchist: "£generic_Monarchist_small 塞伊索王室"
  LES.Monarchist_desc: ""
- LIB.conservatism: "£generic_conservatism_small 民主变革大会"
- LIB.conservatism_desc: ""
+ LIB.conservatism: "£LIB_conservatism_small 利比里亚民族联盟"
  LIB.liberalism: "£LIB_liberalism_small 联合党"
  LIB.liberalism_icon: "£LIB_liberalism_small"
- LIB.liberalism_desc: ""
+ LIB.liberalism_desc: "（自由民主主义） - 团结党是泰勒的主要反对党。该党成立于1984年，在1980年政变后的首次选举中与塞缪尔·多伊竞争。该党提倡自由民主和经济自由化。它还主张与美国建立更紧密的联系，美国一直是该国的传统盟友。"
  LIB.Western_Autocracy: "£LIB_Western_Autocracy_small 利比里亚民族民主党"
  LIB.Western_Autocracy_icon: "£LIB_Western_Autocracy_small"
- LIB.Western_Autocracy_desc: ""
- LIB.anarchist_communism: "£generic_anarchist_communism_small 联合人民党"
- LIB.anarchist_communism_desc: ""
- LIB.neutral_Social: "£generic_neutral_Social_small 全国民主联盟"
- LIB.neutral_Social_desc: ""
- LIB.Neutral_Autocracy: "£generic_Neutral_Autocracy_small 利比里亚民族民主党"
- LIB.Neutral_Autocracy_desc: ""
- LIB.Nat_Autocracy: "£LIB_Nat_Autocracy_small 国家爱国党"
+ LIB.Western_Autocracy_desc: "（民族主义） - 利比里亚民族民主党曾由塞缪尔·多伊博士领导。尽管多伊博士拥抱极权主义、反共产主义、反共济会，但利比里亚与美国结盟。多伊在第一次利比里亚内战中被推翻并死亡后，他的军阀朋友和内阁成员让该党得以生存。"
+ LIB.anarchist_communism: "£LIB_anarchist_communism_small 利比里亚人民党"
+ LIB.anarchist_communism_desc: "（民主社会主义） - 利比里亚人民党是一个泛非洲社会主义政党。"
+ LIB.neutral_Social: "£LIB_neutral_Social_small 联合人民党"
+ LIB.neutral_Social_desc: "（非洲社会主义） - 联合人民党是一个非洲社会主义政党。非洲社会主义包含许多马克思列宁主义元素，但拒绝反宗教、阶级斗争和暴力革命等概念。该党许多成员叛逃到利比里亚人和解与民主团结会反叛组织以反对泰勒，其中包括反叛组织领导人塞古·康纳。"
+ LIB.Neutral_Autocracy: "£generic_Neutral_Autocracy_small 利比里亚自由联盟党"
+ LIB.Nat_Autocracy: "£LIB_Nat_Autocracy_small 利比里亚武装力量"
  LIB.Nat_Autocracy_icon: "£LIB_Nat_Autocracy_small"
- LIB.Nat_Autocracy_desc: ""
+ LIB.Nat_Autocracy_desc: "（军政府）- 泰勒掌权后，他基本上裁撤了利比里亚武装部队的人员，转而支持他的私人武装“反恐部队”。到21世纪初，利比里亚武装部队已几乎不复存在，泰勒已让大多数人员退休。"
  LIT.conservatism: "£LIT_conservatism 祖国联盟-立陶宛基督教民主党"
  LIT.conservatism_icon: "£LIT_conservatism"
  LIT.conservatism_desc: ""
@@ -8122,3 +8120,20 @@
  NIG.Neutral_green_icon: "£NIG_non_aligned_greens"
  NIG.Nat_Autocracy_icon: "£NIG_nationalist_military_junta"
  NIG.Nat_Populism_icon: "£NIG_nationalist_right_wing_populist"
+ LIB.conservatism_icon: "£LIB_conservatism_small"
+ LIB.socialism: "£LIB_socialism_small 改革联盟党"
+ LIB.socialism_icon: "£LIB_socialism_small"
+ LIB.anarchist_communism_icon: "£LIB_anarchist_communism_small"
+ LIB.Neutral_Muslim_Brotherhood: "£LIB_muslim_brotherhood_small 利比里亚全国穆斯林委员会"
+ LIB.Neutral_Muslim_Brotherhood_desc: "（温和派伊斯兰教） - 利比里亚全国穆斯林委员会旨在维护该国穆斯林的权利。穆斯林占利比里亚人口的一小部分，大多数来自曼丁加族。泰勒最初因为与利比亚的关系给予利比里亚穆斯林更多的自由，但近年来，他开始对他们进行基督教化运动。"
+ LIB.Neutral_Muslim_Brotherhood_icon: "£LIB_muslim_brotherhood_small"
+ LIB.Neutral_conservatism: "£LIB_Neutral_conservatism_small 全利比里亚联盟党"
+ LIB.Neutral_conservatism_icon: "£LIB_Neutral_conservatism_small"
+ LIB.oligarchism: "£generic_oligarchism_small 利比里亚民族党"
+ LIB.Neutral_Libertarian: "£generic_Neutral_Libertarian_small 改革利比里亚联合党"
+ LIB.neutral_Social_icon: "£LIB_neutral_Social_small"
+ LIB.Nat_Populism: "£LIB_Nat_Populism_small 自由党"
+ LIB.Nat_Populism_icon: "£LIB_Nat_Populism_small"
+ LIB.Nat_Fascism: "£LIB_Nat_Fascism_small 民族爱国党"
+ LIB.Nat_Fascism_desc: "（民族主义） - 民族爱国党是查尔斯·泰勒叛军组织民族爱国阵线的政治继承者。该党主要作为泰勒的忠实拥护者的集合，并没有真正的党派纲领。泰勒的“政策”主要涉及确保他对利比里亚及其邻国的统治。"
+ LIB.Nat_Fascism_icon: "£LIB_Nat_Fascism_small"
