--- a/localisation/simp_chinese/equipment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/equipment_l_simp_chinese.yml
@@ -652,7 +652,7 @@
  BLR_Rec_tank_2: "MBTS 凯门鳄"
  BLR_Rec_tank_2_desc: "用于侦察和特种部队的机动装甲车。用作侦察和破坏行动、巡逻和护送车队、进行维持和平和警察行动以及在紧急情况下开展行动的车辆。"
  BLR_Rec_tank_2_short: "凯门鳄"
- BLR_infantry_weapons: "AKM突击步枪"
+ BLR_infantry_weapons: "AKM"
  BLR_infantry_weapons_desc: "AKM于1959年开发，是米哈伊尔·卡拉什尼科夫开发的AK-47步枪最常见的现代化变体。它比其前身更轻，自动射击时更准确。"
  BLR_infantry_weapons1: "AK-74突击步枪"
  BLR_infantry_weapons1_desc: "AK-74是从AKM改进而来，与前身相比有显著的升级。值得注意的是，它使用5.45毫米子弹，而不是当时标准的华约标准7.62毫米子弹。"
@@ -9092,3 +9092,8 @@
  NOR_infantry_weapons6: "HK416NM 6.8"
  NOR_infantry_weapons6_short: "HK416NM 6.8"
  NOR_infantry_weapons7: "AIF 40"
+ nsb_attack_helicopter_tech_1: "第1代攻击直升机"
+ nsb_attack_helicopter_tech_2: "第2代攻击直升机"
+ nsb_attack_helicopter_tech_3: "第3代攻击直升机"
+ nsb_attack_helicopter_tech_4: "第4代攻击直升机"
+ nsb_attack_helicopter_tech_5: "第5代攻击直升机"
