--- a/localisation/braz_por/MD_focus_UKR_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_UKR_l_braz_por.yml
@@ -2551,4 +2551,6 @@
  UKR_concers: "Complexo de Defesa de Kharkiv"
  UKR_concers_desc: "Combinaremos todas as nossas empresas da indústria militar em um único complexo. Assim, fortaleceremos a coordenação da produção e aumentaremos a produtividade."
  UKR_concern: "Indústria Militar de Kharkiv"
- UKR_zelenskiy_pizdec_TT: "§RPerforming this trick will cause a repeat of the events of the series: Servant of the People. Ukraine will be fragmented!!!!§!"
+ UKR_zelenskiy_pizdec_TT: "§RCompleted this focus will cause a repeat of the events of the series: Servant of the People. Ukraine will be fragmented!!!!§!"
+ UKR_zaporozhia_gold: "Muzhievo Gold Mine"
+ UKR_zaporozhia_gold_desc: "We will finally attract investors and start developing these mines with gold deposits"
