--- a/localisation/braz_por/equipment_l_braz_por.yml
+++ b/localisation/braz_por/equipment_l_braz_por.yml
@@ -9092,3 +9092,8 @@
  NOR_infantry_weapons6: "HK416NM 6.8"
  NOR_infantry_weapons6_short: "HK416NM 6.8"
  NOR_infantry_weapons7: "AIF 40"
+ nsb_attack_helicopter_tech_1: "Helicóptero de ataque de 1ª geração"
+ nsb_attack_helicopter_tech_2: "Helicóptero de ataque de 2ª geração"
+ nsb_attack_helicopter_tech_3: "Helicóptero de ataque de 3ª geração"
+ nsb_attack_helicopter_tech_4: "Helicóptero de ataque de 4ª geração"
+ nsb_attack_helicopter_tech_5: "Helicóptero de ataque de 5ª geração"
