--- a/localisation/french/MD_dynamic_scripting_l_french.yml
+++ b/localisation/french/MD_dynamic_scripting_l_french.yml
@@ -111,7 +111,6 @@
  script.0.wahabi_ulema: "§YL'ouléma wahhabite§! "
  script.0.the_military: "§YL'armée§! "
  script.0.intelligence_community: "§YLa communauté du renseignement§! "
- script.0.isi_pakistan: "§YISI§! "
  script.0.VEVAK: "§YVEVAK§! "
  script.0.the_bazaar: "§YLe Bazar§! "
  script.0.the_donju: "§YLe Donju§! "
@@ -1981,3 +1980,5 @@
  script.0.FAO_GetNameWithFlag: "[FAO.GetNameWithFlag]"
  script.0.FAO_GetLeader: "[FAO.GetLeader]"
  script.0.FAO_GetAdjective: "[FAO.GetAdjective]"
+ script.0.QTF_GetAdjective: "[QTF.GetAdjective]"
+ script.0.LUR_GetAdjective: "[LUR.GetAdjective]"
