--- a/localisation/polish/MD_dynamic_scripting_l_polish.yml
+++ b/localisation/polish/MD_dynamic_scripting_l_polish.yml
@@ -111,7 +111,6 @@
  script.0.wahabi_ulema: "§YWahabiccy Ulemowie§!"
  script.0.the_military: "§YWojsko§!"
  script.0.intelligence_community: "§YWspólnota wywiadowcza§!"
- script.0.isi_pakistan: "§YISI§!"
  script.0.VEVAK: "§YVEVAK§!"
  script.0.the_bazaar: "§YBazar§!"
  script.0.the_donju: "§YDonju§!"
@@ -1981,3 +1980,5 @@
  script.0.FAO_GetNameWithFlag: "[FAO.GetNameWithFlag]"
  script.0.FAO_GetLeader: "[FAO.GetLeader]"
  script.0.FAO_GetAdjective: "[FAO.GetAdjective]"
+ script.0.QTF_GetAdjective: "[QTF.GetAdjective]"
+ script.0.LUR_GetAdjective: "[LUR.GetAdjective]"
