--- a/localisation/polish/equipment_l_polish.yml
+++ b/localisation/polish/equipment_l_polish.yml
@@ -9092,3 +9092,8 @@
  NOR_infantry_weapons6: "HK416NM 6.8"
  NOR_infantry_weapons6_short: "HK416NM 6.8"
  NOR_infantry_weapons7: "AIF 40"
+ nsb_attack_helicopter_tech_1: "Helikopter szturmowy pierwszej generacji"
+ nsb_attack_helicopter_tech_2: "Helikopter szturmowy drugiej generacji"
+ nsb_attack_helicopter_tech_3: "Helikopter szturmowy 3. generacji"
+ nsb_attack_helicopter_tech_4: "Helikopter szturmowy czwartej generacji"
+ nsb_attack_helicopter_tech_5: "Helikopter szturmowy piątej generacji"
