--- a/localisation/russian/MD_custom_achievements_l_russian.yml
+++ b/localisation/russian/MD_custom_achievements_l_russian.yml
@@ -228,3 +228,17 @@
  libya_t_posing_DESC: "As Libya, have Tibesti and the Tuareg State as subjects while they own all their core states."
  libya_t_posing_TIE_tt: "[TIE.GetNameWithFlag] владеет всеми своими основными состояниями."
  libya_t_posing_TUA_tt: "[TUA.GetNameWithFlag] владеет всеми своими основными состояниями."
+ botswana_naledi_ya_botswana_NAME: "Naledi Ya Botswana"
+ botswana_naledi_ya_botswana_DESC: "Awarded for conspicuous service; Reduce the AIDS infection to its lowest level.\n\n\"Botswana has an incredible future if it can wrestle the HIV scenario to the ground.\"\n\n- Colin Salmon"
+ botswana_conduct_valour_cross_NAME: "Botswana Defence Force Conduct Valour Cross"
+ botswana_conduct_valour_cross_DESC: "Awarded for conspicuous valour in action against an enemy; Be at war with a country 5 times stronger than you.\n\n\"Fatshe leno la rona (Blessed be this noble land).\"\n\n- National anthem of Botswana"
+ botswana_medal_for_meritorious_service_NAME: "Botswana Police Medal for Meritorious Service"
+ botswana_medal_for_meritorious_service_DESC: "Awarded for especially meritorious service; Solve the Zimbabwean refugee crisis.\n\n\"I hated Robert Mugabe. He's one of the worst human beings I've ever met.\"\n\n- Bob Hawke"
+ botswana_teachers_silver_jubilee_medal_NAME: "Botswana Teachers Silver Jubilee Medal"
+ botswana_teachers_silver_jubilee_medal_DESC: "Awarded for teachers of 25 years of meritorious service; Increase the literacy rate to 90%.\n\n\"Gaabo molato wa sekolo (There is no end to learning).\"\n\n- Proverb from Botswana"
+ achievement_diamonds_are_a_girls_best_friend_NAME: "Diamonds Are A Ruler's Best Friend"
+ achievement_diamonds_are_a_girls_best_friend_DESC: "Extract over 500 Precious Metals."
+ achievement_botswana_BOTswana_NAME: "BOTswana"
+ achievement_botswana_BOTswana_DESC: "As Botswana, research $human_imitation_ai$."
+ achievement_botswana_captain_planet_NAME: "Captain Planet Is Done With Your Shit"
+ achievement_botswana_captain_planet_DESC: "As Botswana, have zero poachers in the country and reduce Kalahari desertification to its lowest possible level."
