--- a/localisation/russian/MD_decisions_l_russian.yml
+++ b/localisation/russian/MD_decisions_l_russian.yml
@@ -30,7 +30,7 @@
  HUN_nationalist_claims_UKR: "Претензия на Вергерские Карпаты"
  HUN_nationalist_claims_UKR_desc: "Венгерское население в Украине страдало слишком долго. Мы должны стремиться к воссоединению с ними."
  NOR_nationalist_claims_DEN: "Претензии на Гронланд и Фёрёне"
- NOR_nationalist_claims_DEN_desc: "Гронланд и Фёрёне всегда были исторической частью Норвегии, наши владения были незаконно переданы [DEN.GetNameWithFlag] [SWE.GetNameWithFlag]. Не шорошо. Должно быть очевидно, что мы хотим их вернуть."
+ NOR_nationalist_claims_DEN_desc: "Грёнланд и Феройен всегда были историческими частями Норвегии, но наши владения были незаконно переданы [DEN.GetNameWithFlag] [SWE.GetNameWithFlag]. Это не круто. Должно быть само собой разумеющимся, что мы хотим их вернуть."
  NOR_nationalist_claims_ENG: "Претензия на Шетланд"
  NOR_nationalist_claims_ENG_desc: "Шетланд культурно ближе к Норвегии, чем к Шотландии или [ENG.GetNameWithFlag]. Они были бы счастливее с нами."
  NOR_nationalist_claims_SCO: "Претензия на Шетланд"
