--- a/localisation/russian/MD_focus_ARM_l_russian.yml
+++ b/localisation/russian/MD_focus_ARM_l_russian.yml
@@ -423,8 +423,6 @@
  ARM_support_for_volunteers_desc: "Армянский легион"
  ARM_american_legion: "Армянский легион Америки"
  ARM_american_legion_desc: "Армянский легион Америки - это организация, в которую входят армяне, служившие в прошлом в вооруженных силах США. Легион намерен бороться против врагов армянского народа.В организации также есть небольшие специальные команды из пяти человек, которые проходят секретную подготовку под руководством бывших офицеров морской пехоты армии США. В Армянском легионе уже более тысячи бойцов - молодых людей армянского происхождения. Мы должны поддержать их дело и включить их в состав вооруженных сил"
- ARM_millitarism: "Милитаризм"
- ARM_millitarism_desc: "Милитаризм - это убеждение или желание правительства или народа, что государство должно поддерживать сильный военный потенциал и агрессивно использовать его для расширения национальных интересов и/или ценностей. Он также может подразумевать прославление армии и идеалов профессионального военного класса и преобладание вооруженных сил в управлении или политике государства"
  ARM_russia3: "Союз с Россией"
  ARM_russia3_desc: "Россия, конечно, никогда не будет помогать нашей экспансии войсками, но она также никогда не помешает нам в этом. Зная, что может возникнуть новый конфликт, они скорее будут продавать нам оружие и оказывать помощь оборудованием, как они всегда делали."
  ARM_kurds2: "Союз с курдами"
@@ -2046,3 +2044,5 @@
  ARM_renewable_energy_focus1: "Возобновляемая энергия"
  ARM_renewable_energy_focus2: "Возобновляемая энергия"
  ARM_renewable_energy_focus3: "Возобновляемая энергия"
+ ARM_militarism: "Милитаризм"
+ ARM_militarism_desc: "Милитаризм — это вера или желание правительства или народа, что государство должно поддерживать сильный военный потенциал и агрессивно использовать его для расширения национальных интересов и/или ценностей. Это может также означать прославление армии и идеалов профессионального военного класса, а также преобладание вооруженных сил в управлении или политике государства."
