--- a/localisation/simp_chinese/MD_focus_ARM_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_ARM_l_simp_chinese.yml
@@ -420,8 +420,6 @@
  ARM_support_for_volunteers_desc: "亚美尼亚军团"
  ARM_american_legion: "美国亚美尼亚军团"
  ARM_american_legion_desc: "美国亚美尼亚军团是一个由过去在美军服役的亚美尼亚人组成的组织。该军团打算与亚美尼亚人民的敌人作战。该组织还拥有由五人组成的小型特别小组，他们在前美国陆军海军陆战队军官的指导下接受秘密训练。亚美尼亚军团已有一千多名战士——亚美尼亚裔年轻人。我们应该支持他们的事业并将他们纳入军事部门。"
- ARM_millitarism: "军国主义"
- ARM_millitarism_desc: "军国主义是政府或人民的信念或愿望，即国家应该保持强大的军事能力并积极利用它来扩大国家利益和/或价值观。它还可能意味着对军队和专业军事阶层理想的颂扬以及武装部队在国家行政或政策中的主导地位。"
  ARM_russia3: "俄罗斯联盟"
  ARM_russia3_desc: "俄罗斯肯定永远不会出兵援助我们的扩张，但他们也永远不会阻止我们这样做。知道可能会出现新的冲突，他们更有可能像往常一样向我们出售武器并提供装备援助。"
  ARM_kurds2: "库尔德盟友"
@@ -488,8 +486,8 @@
  ARM_bagratuni_desc: "巴格拉图尼或巴格拉特王朝是统治中世纪亚美尼亚王国的亚美尼亚皇家王朝。他们起源于古代亚美尼亚王国的附庸，在阿拉伯统治亚美尼亚期间成为最显赫的亚美尼亚贵族家族，最终建立了自己的独立王国。 根据现代历史学家西里尔·图曼诺夫的说法，他们被认为是格鲁吉亚皇家巴格拉季昂尼王朝的祖先。"
  ARM_pretensia_west_arm: "西亚美尼亚领土主张"
  ARM_pretensia_west_arm_desc: "罗兰·冯·巴格拉图尼已经在伪西亚美尼亚共和国政府中站稳了脚跟。 这意味着他已经有了经济和政治专家的支持。"
- ARM_miapet: "Miapetutsyun"
- ARM_miapet_desc: "Miapetutsyun是一个亚美尼亚语单词，字面意思是统一国家。这个词被用来标记我们古代的王国和帝国。如果我们必须决定我们的国家必须是什么样子，那么它将被定义为Miapetutsiun！"
+ ARM_miapet: "统一的国家"
+ ARM_miapet_desc: "Miapetutsyun是一个亚美尼亚语单词，字面意思是统一的国家。这个词被用来标记我们古代的王国和帝国。如果我们必须决定我们的国家必须是什么样子，那么它将被定义为Miapetutsiun！"
  ARM_turkey_section: "分割土耳其"
  ARM_turkey_section_desc: "土耳其法西斯压迫周边国家太久了。亚美尼亚人、希腊人、库尔德人和叙利亚人需要最终将土耳其分割为各自的领地。同时为了维护稳定并防止土耳其的崛起，我们需要创建一个法国军队驻扎的安全区。"
  ARM_folk_spirit: "民俗精神"
@@ -648,8 +646,8 @@
  ARM_sky_defence_desc: "第二次世界大战的经验表明，在大型冲突中，没有空中支援几乎不可能有底气进行作战行动。为了我国的国防，首先，有必要模拟敌军飞机封锁天空的情形。"
  ARM_avia_trenings: "集安组织联合演习"
  ARM_avia_trenings_desc: "在集安组织的框架中，俄罗斯和亚美尼亚会举行在航空合作上的联合演习。这就是他们真正所坚信的力量：对自然和人民的厚爱以及独特的文化是上帝赐予的礼物，没有赐予，他们是绝不可能成功的。"
- ARM_russian_helicopters: "俄罗斯运输机"
- ARM_russian_helicopters_desc: "俄罗斯货机确实是货机和飞机的系列货机。我们需要货物，我们需要飞机。货机？货机！是的 货物。飞机。货机货货货货。我厌倦了制作这棵国策。帮帮我。"
+ ARM_russian_helicopters: "俄罗斯货机"
+ ARM_russian_helicopters_desc: "俄罗斯的货机确实是一系列的货机和飞机。我们需要货物，我们需要飞机。货机？货机！是的。货物。飞机。货机货物货物货物。我厌倦了制作这个国策树。救救我。"
  ARM_X55: "X-55"
  ARM_X55_desc: "X-55无人机可以在高空飞行，顺理成章地认为该型号不起眼，这在无人机的军事用途中绝不是不重要的。这种无人机配备了内燃机，与配备电动机的无人机相比，这使得该工具更加可靠和高效。该模型的最大飞行高度为4500米，保证了几乎所有与特定区域和地区研究相关的目标的实现。"
  ARM_find_new_ZSU: "寻找新的自行高炮"
@@ -933,7 +931,7 @@
  ARM_sdatsa: "放弃"
  ARM_prodolhit_borbu: "继续奋斗"
  ARM_nelegitim: "承认非合法性"
- ARM_nikol_i_ko: "尼科尔·杜克索夫！"
+ ARM_nikol_i_ko: "尼科尔，无所畏惧！"
  ARM_proval_barhat_revol: "天鹅绒革命的失败"
  ARM_unloyaly_military: "处理不忠诚的军队"
  ARM_fast_reforms: "快速改革"
@@ -1108,7 +1106,7 @@
  arme.51.a: "当然"
  arme.51.b: "什么？"
  ARM_diplo_blade_idea: "恩贾德精神"
- ARM_western_armenia_economy: "联盟"
+ ARM_western_armenia_economy: "统一的国家"
  ARM_nat2_TT: "我们将获得其他各方的大力支持"
  ARM_research_iran_russia: "亚美尼亚-俄罗斯-伊朗合作"
  arme.52.t: "亚美尼亚-俄罗斯-伊朗合作"
@@ -1651,8 +1649,8 @@
  armenia.8.d: "在尼科尔·帕希尼扬（Nikol Pashinyan）的带领下，埃里温的抗议活动已发展到三十万人，抗议活动包括封锁道路、鸣喇叭等公民不服从行为，人民表明他们已经厌倦了猖獗的腐败，并要求真正的民主，如果共和党萨尔基相不下台，他们就会在叛乱中被强力推翻。"
  armenia.8.a: "好的，好的..."
  armenia.9.t: "天鹅绒革命"
- armenia.9.d: "在亚美尼亚的一系列政治抗议活动中，谢尔日·萨尔基相领导的亚美尼亚反动所谓“保守”党下台，让人民选举尼科尔·帕希尼扬上台，后者承诺摧毁困扰亚美尼亚的猖獗腐败现象，并改善其经济状况。 经济形势并阻止大规模移民。"
- armenia.9.a: "杜霍夫！"
+ armenia.9.d: "在亚美尼亚发生的一系列政治抗议活动中，谢尔日·萨尔基相领导的亚美尼亚反动所谓“保守”党下台，让人民选举尼科尔·帕希尼扬上台，后者承诺要消灭困扰亚美尼亚的猖獗腐败，改善其经济状况，并制止大规模移民。"
+ armenia.9.a: "无所畏惧！"
  arm_prowest.1000.t: "和平终临！"
  arm_prowest.1000.d: "终于，已经过去了20年。但我们与阿塞拜疆达成了协议。"
  arm_prowest.1000.a: "太好了，让我们看看那会持续多久。"
@@ -1958,7 +1956,7 @@
  ARM_allow_esid_desc: "雅兹迪人和亚美尼亚人都是共同过去的继承者。我们需要尊重彼此的宗教信仰，持续和谐共处。"
  ARM_integrat_gruzin_desc: "格鲁吉亚现在已被征服，我们需要决定该怎么做。"
  ARM_religion_autonomy_desc: "格鲁吉亚东正教必须受到尊重，因为除了种族差异之外，它是格鲁吉亚身份的基础。"
- ARM_church_reforms_desc: "我们必须让格鲁吉亚东正教重新回归到唯物主义。"
+ ARM_church_reforms_desc: "我们必须让格鲁吉亚东正教重新回归合性论。"
  ARM_georgian_langua_desc: "格鲁吉亚语必须是我们新省份的唯一语言。这将促进我们之间的文化接受。"
  ARM_teach_armyanish_desc: "我们将教他们亚美尼亚语作为第二语言。这将使我们各国更加团结。"
  ARM_autonomy_small_natio_aze_desc: "阿塞拜疆小民族必须在我们新的联邦体系中保留自主文化。"
@@ -1985,7 +1983,7 @@
  ARM_pax_armenia2_desc: "现在，亚美尼亚在该地区占据主导地位。我们必须为此感到自豪！"
  ARM_third_armenia_desc: "我们实现了几代亚美尼亚人认为难以想象的奇迹。"
  ARM_parlament_rebublik_desc: "为了延长我们的统治，我们必须改革宪法并稍微修改一下……"
- ARM_triump_revolution_barhat_desc: "杜霍夫！尼科尔·帕希尼扬在亚美尼亚夺取了权力。"
+ ARM_triump_revolution_barhat_desc: "无所畏惧！尼科尔·帕希尼扬在亚美尼亚夺取了权力。"
  ARM_way_of_revol_desc: "为什么要举行选举？大家都知道帕希尼扬是亚美尼亚的合法领导人！"
  ARM_make_election_desc: "我们必须举行适当、自由的选举，向全世界展示亚美尼亚已经焕然一新。"
  ARM_nikol_i_ko_desc: "现在，尼科尔·帕希尼扬已经完全控制了国家，他现在必须进行新的改革。"
@@ -2036,7 +2034,7 @@
  ARM_YerevaNN_desc: "埃里温NN是一家位于亚美尼亚埃里温的机器学习研究中心。"
  ARM_cybersecurity_desc: "亚美尼亚政府应支持网络安全，以保护国家资产、保护关键基础设施并确保数字系统的弹性，从而在日益互联和数字化的世界中加强国家安全。"
  ARM_AUA_desc: "亚美尼亚美国大学是位于亚美尼亚埃里温的一所私立独立大学，获得西方学校和学院协会高级学院和大学委员会的认可。它是前苏联第一所获得美国认可的提供本科和研究生教育的机构。"
- ARM_new_vozmozh_desc: "我们需要看看亚美尼亚现在有哪些教育支持机会。"
+ ARM_new_vozmozh_desc: "我们需要看看亚美尼亚现在有哪些教育支持的机会。"
  ARM_new_ayb_desc: "Ayb大学是亚美尼亚埃里温的一所私立教育综合体，由Ayb教育基金会于2011年开设。"
  ARM_tumo_desc: "TUMO创意技术中心是一项针对12-18岁青少年的免费教育计划，专门从事技术和设计，在各个TUMO中心和节点提供教育。"
  ARM_EU_educ_deal_desc: "亚美尼亚与欧盟的教育合作包括共同努力加强教育体系、促进文化交流、促进研究伙伴关系、促进相互理解并为亚美尼亚和欧洲学术格局的发展做出贡献。"
@@ -2046,3 +2044,5 @@
  ARM_diplo_georgia_desc: "格鲁吉亚是我们的战略经济伙伴和盟友。我们需要向格鲁吉亚派遣外交使团以加强我们的关系。"
  ARM_nato_standards: "北约现代化"
  ARM_nato_standards_desc: "我们可以要求北约不要向我们提供新型防空系统，而是相反，对我们现有的武器库进行现代化改造，以实现更大的兼容性和统一性。"
+ ARM_militarism: "军国主义"
+ ARM_militarism_desc: "军国主义是政府或人民的一种信念或愿望，即国家应保持强大的军事能力，并积极利用其来扩大国家利益和/或价值观。它也可能意味着对军队和职业军人阶层理想的赞美，以及武装部队在国家行政或政策中的主导地位。"
