--- a/localisation/simp_chinese/MD_focus_ITA_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_ITA_l_simp_chinese.yml
@@ -1441,12 +1441,12 @@
  italy_md.42.t: "那不勒斯的城市垃圾危机！"
  italy_md.42.d: "规划不善、多年来对基础设施的忽视、邻避主义、黑帮活动和政治腐败，导致那不勒斯的废物回收和管理系统崩溃。这座曾经美丽的城市的每个角落都堆满了垃圾，但人们几乎没有能力把它们捡起来，更不知道该把垃圾放在哪里，因为所有标准和紧急垃圾填埋场都已满了。"
  italy_md.42.o1: "打击邻避综合征并建造焚烧厂"
- italy_md.42.o2: "将废物运往德国和奥地利"
+ italy_md.42.o2: "将垃圾运往德国和奥地利"
  italy_md.42.o3: "我认识一些可以帮助我们的人.."
  italy_md.43.t: "罗马城市垃圾危机！"
  italy_md.43.d: "规划不善、多年来对基础设施的忽视、邻避主义、黑帮活动和政治腐败，导致罗马废物回收和管理系统崩溃。这座曾经美丽的城市的每个角落都堆满了垃圾，但人们几乎没有能力把它们捡起来，更不知道该把垃圾放在哪里，因为所有标准和紧急垃圾填埋场都已满了。"
  italy_md.43.o1: "打击邻避综合征并建造焚烧厂"
- italy_md.43.o2: "将废物运往德国和奥地利"
+ italy_md.43.o2: "将垃圾运往德国和奥地利"
  italy_md.43.o3: "我认识一些可以帮助我们的人.."
  italy_md.44.t: "意大利提出军事结盟"
  italy_md.44.d: "意大利希望通过购买我们的装备来改善我们两军之间的合作。"
@@ -1534,7 +1534,7 @@
  italy_md.66.t: "自由平等党与民主党决裂"
  italy_md.66.d: "自由与平等是一个左翼政党，由前反黑帮党法官彼得罗·格拉索在与民主党分裂后于 2007 年创立，代表了民主党的大部分最左翼。它是一个社会主义进步政党，大力关注社会、妇女和移民权利，并通过政府干预消除不平等。"
  italy_md.66.o1: "有趣"
- italy_md.67.t: "召唤一位受人尊敬的机构人物"
+ italy_md.67.t: "召唤一位受人尊敬的机构代表人物"
  italy_md.67.d: "意大利面临着严峻的形势，我们不能冒险让这个国家受到无能的政治阶层的摆布，必须组建一个技术官僚政府，以便能够在不受政治机会主义和意识形态狂热主义束缚的情况下完成需要做的事情。我们只需要选择适合该工作的人。"
  italy_md.67.o1: "马里奥·蒙蒂"
  italy_md.67.o2: "马里奥·德拉吉"
@@ -2457,11 +2457,6 @@
  ITA_specialize_mangusta_spirit_loc_3: "§YAttack Helicopters§!生产花费：§R+15%§!\n§YAttack Helicopters§!对人员杀伤：§G+30%§!"
  ITA_specialize_otomatic_spirit_loc_1: "§Y自行防空炮§!生产花费：§G-15%§!\n§Y自行防空炮§!可靠性：§R-7.5%§!"
  ITA_specialize_otomatic_spirit_loc_2: "§Y自行防空炮§!生产花费：§R+15%§!\n§Y自行防空炮§!对空攻击：§G+30%§!"
- ITA_ITA_modify_article_18: "修改劳工法第十八条"
- ITA_ITA_modify_article_18_desc: "《劳工法》第18条规定雇主极难解雇员工，我们的就业市场因此受到影响。修改该法肯定会引发反对派的“强迫劳动”和“奴役”指控，但这在现实中只是常识。"
- ITA_ITA_modify_article_18_decision: "修改劳工法第十八条"
- ITA_ITA_modify_article_18_decision_desc: "《劳工法》第18条规定雇主极难解雇员工，我们的就业市场因此受到影响。修改该法肯定会引发反对派的“强迫劳动”和“奴役”指控，但这在现实中只是常识。"
- ITA_ITA_modify_article_18_decision_repeal: "撤回劳工法第十八条修正案。"
  ITA_modify_additional_expenses_effect_TT: "这将改变我们的每周支出：[?additional_expenses_change|-]B\n"
  ITA_modify_nimby_modifier_effect_TT: "这就修改邻避症候群的效果：[?nimby_culture_change|%+]\n"
  ITA_modify_tax_gain_multiplier_modifier_effect_TT: "§Y税收乘数§!：[?ITA_tax_gain_multiplier_modifier_change|%+]\n"
@@ -2528,3 +2523,8 @@
  ITA_modify_energy_gain_TT: "§Y发电量§!：[?ITA_energy_gain_change|+]GW\n"
  ITA_modify_reform_expectance_effect_TT: "§Y改革前景§!：[?drift_switch_change|3+]\n"
  ITA_treaty_of_benghazi_TT: "已与[LBA.GetNameWithFlag]签署§Y班加西条约§!"
+ ITA_modify_article_18: "修改劳工法第十八条"
+ ITA_modify_article_18_desc: "劳工法第十八条规定雇主很难解雇员工，我们的就业市场也因此受到影响。修改该法肯定会引发反对派的“强迫劳动”和“奴役”指控，但这在现实中只是常识。"
+ ITA_modify_article_18_decision: "修改劳工法第十八条"
+ ITA_modify_article_18_decision_desc: "劳工法第十八条规定雇主很难解雇员工，我们的就业市场也因此受到影响。修改该法肯定会引发反对派的“强迫劳动”和“奴役”指控，但这在现实中只是常识。"
+ ITA_modify_article_18_decision_repeal: "撤回劳工法第十八条的修改。"
